Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I827e4a7e82da9e5fa04dd222f3058f15a567ff38

--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -834,14 +834,10 @@
     <string name="bluetooth_scanning_on_info_message" msgid="786648535600075223">"ব্লুটুথ চালু করা থাকলে, আপনার ডিভাইস কাছাকাছি অন্যান্য ব্লুটুথ ডিভাইসের সাথে যোগাযোগ করতে পারবে।\n\nডিভাইস ব্যবহারের অভিজ্ঞতা উন্নত করতে, এমনকি ব্লুটুথ বন্ধ থাকাকালীনও, অ্যাপ ও পরিষেবাগুলি কাছাকাছি থাকা ডিভাইস যেকোনও সময় স্ক্যান করতে পারবে। যেমন, এটি লোকেশন-ভিত্তিক ফিচার এবং পরিষেবা উন্নত করার মতো বিভিন্ন কাজের জন্য ব্যবহার করা হতে পারে। আপনি ব্লুটুথ স্ক্যানিং সেটিংস থেকে এটি পরিবর্তন করতে পারবেন।"</string>
     <string name="bluetooth_scanning_on_info_message_auto_on_available" msgid="7792443293031247638">"ব্লুটুথ চালু করা থাকলে, আপনার ডিভাইস আশেপাশে থাকা ব্লুটুথ ডিভাইসগুলির সাথে কানেক্ট করতে পারে। দ্রুত শেয়ার ও Find My Device-এর মতো ফিচার ব্লুটুথ ব্যবহার করে।\n\nব্লুটুথ বন্ধ থাকলেও, অ্যাপ ও পরিষেবাগুলি আশেপাশের ডিভাইস স্ক্যান করতে পারে। লোকেশন-ভিত্তিক ফিচার ও পরিষেবা উন্নত করার মতো ক্ষেত্রে এটি ব্যবহৃত হয়। আপনি ব্লুটুথ স্ক্যানিং সেটিংসে গিয়ে এটি পরিবর্তন করতে পারবেন।"</string>
     <string name="bluetooth_scan_change" msgid="1744636222637390367">"পরিবর্তন করুন"</string>
-    <!-- no translation found for bluetooth_key_missing_title (7799054163548353853) -->
-    <skip />
-    <!-- no translation found for bluetooth_key_missing_message (2388861106663695319) -->
-    <skip />
-    <!-- no translation found for bluetooth_key_missing_forget (4692006517823001013) -->
-    <skip />
-    <!-- no translation found for bluetooth_key_missing_cancel (2482416446357804371) -->
-    <skip />
+    <string name="bluetooth_key_missing_title" msgid="7799054163548353853">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> কানেক্ট করা নেই"</string>
+    <string name="bluetooth_key_missing_message" msgid="2388861106663695319">"আপনার সুরক্ষার জন্য, এই ডিভাইসটি ভুলে যান, তারপর আবার এটি পেয়ার করুন"</string>
+    <string name="bluetooth_key_missing_forget" msgid="4692006517823001013">"ডিভাইস আনপেয়ার করুন"</string>
+    <string name="bluetooth_key_missing_cancel" msgid="2482416446357804371">"বাতিল করুন"</string>
     <string name="device_details_title" msgid="1155622417516195481">"ডিভাইসের বিবরণ"</string>
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"কীবোর্ড সেটিংস"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"আরও সেটিংস"</string>
@@ -1281,13 +1277,17 @@
     <string name="dark_ui_summary_off_auto_mode_auto" msgid="6766831395970887213">"সূর্যাস্তের সময়ে নিজে থেকে চালু হবে"</string>
     <string name="dark_ui_summary_off_auto_mode_custom" msgid="1345906088326708376">"<xliff:g id="ID_1">%1$s</xliff:g> টার সময় নিজে থেকে চালু হবে"</string>
     <string name="dark_ui_summary_off_auto_mode_custom_bedtime" msgid="7759826673214624622">"ঘুমানোর সময় অটোমেটিক চালু হয়ে যাবে"</string>
+    <string name="dark_ui_summary_off_auto_mode_modes" msgid="2672694802103388896">"<xliff:g id="ID_1">%1$s</xliff:g> শুরু হলে চালু হবে"</string>
     <string name="dark_ui_summary_on_auto_mode_never" msgid="2468597062391435521">"কখনই নিজে থেকে বন্ধ হবে না"</string>
     <string name="dark_ui_summary_on_auto_mode_auto" msgid="5553376115092648636">"সূর্যোদয়ের সময় নিজে থেকে বন্ধ হবে"</string>
     <string name="dark_ui_summary_on_auto_mode_custom" msgid="2526935680241734784">"<xliff:g id="ID_1">%1$s</xliff:g> টার সময় নিজে থেকে বন্ধ হবে"</string>
     <string name="dark_ui_summary_on_auto_mode_custom_bedtime" msgid="1976993025762551246">"ঘুমানোর সময় অটোমেটিক বন্ধ হয়ে যাবে"</string>
+    <string name="dark_ui_summary_on_auto_mode_modes" msgid="7769594183411785087">"<xliff:g id="ID_1">%1$s</xliff:g> শেষ হলে বন্ধ হবে"</string>
     <string name="dark_ui_text" msgid="4392646155331126666">"ব্যাটারি যাতে অনেক্ষণ চলতে পারে সেই জন্য গাঢ় থিম কিছু স্ক্রিনে কালো রঙয়ের ব্যাকগ্রাউন্ড ব্যবহার করে। গাঢ় থিমের সময়সূচি আপনার স্ক্রিনটি বন্ধ না হওয়া পর্যন্ত চালু হওয়ার জন্য অপেক্ষা করে।"</string>
     <string name="dark_ui_bedtime_footer_summary" msgid="5576501833145170581">"ডার্ক থিম বর্তমানে আপনার বেডটাইম মোডের শিডিউল অনুযায়ী চালু বা বন্ধ হয়"</string>
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"বেডটাইম মোডের সেটিংস"</string>
+    <string name="dark_ui_modes_footer_summary" msgid="1041117250408363391">"{count,plural,offset:2 =0{এছাড়া, মোড, ডার্ক থিম চালু করতে পারে}=1{এছাড়া, {mode_1} ডার্ক থিম চালু করে}=2{এছাড়া, {mode_1} ও {mode_2} ডার্ক থিম চালু করে}=3{এছাড়া, {mode_1}, {mode_2} ও {mode_3} ডার্ক থিম চালু করে}one{{mode_1}, {mode_2} ও আরও #টি মোড ডার্ক থিম চালু করে}other{{mode_1}, {mode_2} ও আরও #টি মোড ডার্ক থিম চালু করে}}"</string>
+    <string name="dark_ui_modes_footer_action" msgid="80671811848446248">"মোড সেটিংস"</string>
     <string name="even_dimmer_display_title" msgid="6731255736830410149">"এমনকি সাধারণ রেঞ্জের নিচে"</string>
     <string name="even_dimmer_display_summary" msgid="120301078873242172">"ডিভাইসের স্ক্রিনের আলো স্বাভাবিক মাত্রার চেয়ে কম রাখুন"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"স্ক্রিন টাইমআউট"</string>
@@ -1952,7 +1952,8 @@
     <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"একদম নিচে ডানদিকে ক্লিক করুন"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"আরও বিকল্পের জন্য টাচপ্যাডের নিচে ডানদিকের কোণায় ক্লিক করুন"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"পয়েন্টারের গতি"</string>
-    <string name="pointer_fill_style" msgid="8413840032931637595">"পয়েন্টার ফিল স্টাইল"</string>
+    <!-- no translation found for pointer_fill_style (8794616790175016092) -->
+    <skip />
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"পয়েন্টার ফিল স্টাইল বদলে কালো করুন"</string>
     <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"পয়েন্টার ফিল স্টাইল বদলে সবুজ করুন"</string>
     <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"পয়েন্টার ফিল স্টাইল বদলে হলুদ করুন"</string>
@@ -1999,10 +2000,8 @@
     <string name="modifier_keys_reset" msgid="551170906710422041">"রিসেট করুন"</string>
     <string name="modifier_keys_picker_title" msgid="244545904150587851">"\'মডিফায়ার কী\' বেছে নেওয়া"</string>
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"<xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g>-এর জন্য নতুন \'কী\' বেছে নিন:"</string>
-    <!-- no translation found for keyboard_a11y_settings (2564659018555385728) -->
-    <skip />
-    <!-- no translation found for keyboard_a11y_settings_summary (1698531156574098722) -->
-    <skip />
+    <string name="keyboard_a11y_settings" msgid="2564659018555385728">"ফিজিক্যাল কীবোর্ডের অ্যাক্সেসিবিলিটি"</string>
+    <string name="keyboard_a11y_settings_summary" msgid="1698531156574098722">"স্টিকি কী, বাউন্স কী, মাউস কী"</string>
     <string name="ime_label_title" msgid="8994569521516807168">"<xliff:g id="IME_LABEL">%s</xliff:g> লেআউট"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"ডিফল্ট"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"অটোমেটিক: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2071,6 +2070,12 @@
     <string name="general_category_title" msgid="6298579528716834157">"সাধারণ"</string>
     <string name="display_category_title" msgid="6638191682294461408">"ডিসপ্লে"</string>
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"রঙ এবং মোশন"</string>
+    <!-- no translation found for accessibility_pointer_and_touchpad_title (8719482393177273831) -->
+    <skip />
+    <!-- no translation found for accessibility_pointer_and_touchpad_summary (6089872217234956258) -->
+    <skip />
+    <!-- no translation found for accessibility_pointer_color_customization_title (3376392766113189508) -->
+    <skip />
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"কালার কনট্রাস্ট"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"চড়া কনট্রাস্ট টেক্সট, বোতাম ও আইকনকে আরও বেশি আলাদা করে তোলে। আপনার কাছে যে কনট্রাস্ট সেরা মনে হবে সেটি বেছে নিন।"</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"কিছু অ্যাপ সব রঙ ও টেক্সট কন্ট্রাস্ট সেটিংসে কাজ নাও করতে পারে"</string>
@@ -2214,11 +2219,9 @@
     <string name="accessibility_shortcut_edit_dialog_title_advance" msgid="4567868630655591506">"উন্নত"</string>
     <string name="accessibility_screen_magnification_navbar_configuration_warning" msgid="266736851606791552">"অ্যাক্সেসযোগ্যতা বোতামটি <xliff:g id="SERVICE">%1$s</xliff:g> এর সাথে সেট করা আছে। ম্যাগনিফিকেশন ব্যবহার করার জন্য অ্যাক্সেসযোগ্যতা বোতামটি স্পর্শ করে টিপে ধরুন, তারপর ম্যাগনিফিকেশন বেছে নিন।"</string>
     <string name="accessibility_screen_magnification_gesture_navigation_warning" msgid="991017769735632046">"অ্যাক্সেসিবিলিটি জেসচার <xliff:g id="SERVICE">%1$s</xliff:g>-এ সেট করা আছে। ম্যাগনিফিকেশন ব্যবহার করার জন্য, স্ক্রিনের নিচ থেকে দুটি আঙুল দিয়ে উপরের দিকে সোয়াইপ করুন এবং ধরে থাকুন। তার পরে ম্যাগনিফিকেশন বেছে নিন।"</string>
-    <!-- no translation found for accessibility_global_gesture_preference_title (8866765674372344850) -->
-    <skip />
+    <string name="accessibility_global_gesture_preference_title" msgid="8866765674372344850">"ভলিউম কী শর্টকাট"</string>
     <string name="accessibility_shortcut_settings" msgid="836783442658447995">"শর্টকাটের সেটিংস"</string>
-    <!-- no translation found for accessibility_shortcut_service_on_lock_screen_title (2301019277262462426) -->
-    <skip />
+    <string name="accessibility_shortcut_service_on_lock_screen_title" msgid="2301019277262462426">"লক স্ক্রিন থেকে ভলিউম কী শর্টকার্ট"</string>
     <string name="accessibility_shortcut_description" msgid="2184693606202133549">"লক স্ক্রিন থেকে ফিচার শর্টকাট চালু করার অনুমতি দিন। উভয় ভলিউম কী কয়েক সেকেন্ড ধরে থাকুন।"</string>
     <string name="accessibility_button_title" msgid="5251235485581552614">"অ্যাক্সেসিবিলিটি বোতাম"</string>
     <string name="accessibility_button_gesture_title" msgid="3573456209050374139">"অ্যাক্সেসিবিলিটি বোতাম ও জেসচার"</string>
@@ -2238,6 +2241,7 @@
     <string name="accessibility_button_opacity_title" msgid="4727355657530362289">"ব্যবহার না হলে ট্রান্সপারেন্ট হয়ে যায়"</string>
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"ট্রান্সপারেন্ট"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"নন-ট্রান্সপারেন্ট"</string>
+    <string name="accessibility_button_disabled_button_mode_summary" msgid="1978174613270619492">"বোতাম মোড ব্যবহার করার সময় নেভিগেশন বার উপলভ্য থাকে না।"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"উচ্চ কনট্রাস্টযুক্ত টেক্সট"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"কালো অথবা সাদাতে টেক্সটের রঙ পরিবর্তন করুন। এটির জন্য ব্যাকগ্রাউন্ডের হিসেবে কনট্রাস্ট বেড়ে যায়।"</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_title" msgid="8737272017343509753">"টেক্সটের কনট্রাস্ট বাড়িয়ে নিন"</string>
@@ -4112,8 +4116,7 @@
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"এই অ্যাপের দ্বারা তৈরি হওয়া সমস্ত \'বিরক্ত করবে না\' নিয়মগুলিকে সরানো হবে৷"</string>
     <string name="zen_modes_access_warning_dialog_title" msgid="8372164559156809659">"<xliff:g id="APP">%1$s</xliff:g> অ্যাপের জন্য মোড অ্যাক্সেস করার অনুমতি চান?"</string>
     <string name="zen_modes_access_warning_dialog_summary" msgid="2432178679607798200">"অ্যাপ \'বিরক্ত করবে না\' মোড চালু/বন্ধ করা, মোড ম্যানেজ করা ও চালু করা এবং সম্পর্কিত সেটিংসে পরিবর্তন করতে পারবে।"</string>
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (189454396436517964) -->
-    <skip />
+    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="189454396436517964">"<xliff:g id="APP">%1$s</xliff:g>-এর জন্য মোডের অ্যাক্সেস তুলে নিতে চান?"</string>
     <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"এই অ্যাপের তৈরি করা সব মোড সরিয়ে দেওয়া হবে।"</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"অপ্টিমাইজ করবেন না"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Optimize"</string>
@@ -5295,8 +5298,10 @@
     <string name="show_captions_enabled" msgid="7089043007924626">"চালু আছে"</string>
     <string name="live_caption_disabled" msgid="3562035026547887366">"বন্ধ আছে"</string>
     <string name="live_caption_enabled" msgid="5269360946200718949">"চালু আছে"</string>
-    <string name="audio_seek_bar_state_left_first" msgid="8814986910920838972">"অডিও %1$d%% বাঁদিক, %2$d%% ডানদিক"</string>
-    <string name="audio_seek_bar_state_right_first" msgid="1999368979633398876">"অডিও %1$d%% ডানদিক, %2$d%% বাঁদিক"</string>
+    <!-- no translation found for audio_seek_bar_state_left_first (1641359989891833888) -->
+    <skip />
+    <!-- no translation found for audio_seek_bar_state_right_first (6027686565598201061) -->
+    <skip />
     <string name="about_phone_device_name_warning" msgid="3243226572404472381">"আপনার ইনস্টল করা অ্যাপে আপনার ডিভাইসের নাম দেখা যাচ্ছে। আপনি ব্লুটুথ ডিভাইস বা কোনও ওয়াই-ফাই নেটওয়ার্কে কানেক্ট অথবা ওয়াই-ফাই হটস্পট সেট-আপ করলে অন্য লোকজনও এটি দেখতে পেতে পারেন।"</string>
     <string name="grammatical_gender_title" msgid="8584242850477270828">"ব্যাকরণগতভাবে লিঙ্গ পরিচয়"</string>
     <string name="grammatical_gender_dialog_title" msgid="8754048592099871587">"ব্যাকরণগতভাবে লিঙ্গ পরিচয় বেছে নিন"</string>
