--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -1277,13 +1277,21 @@
     <string name="dark_ui_summary_off_auto_mode_auto" msgid="6766831395970887213">"در غروب به‌طور خودکار روشن می‌شود"</string>
     <string name="dark_ui_summary_off_auto_mode_custom" msgid="1345906088326708376">"در ساعت <xliff:g id="ID_1">%1$s</xliff:g> به‌طور خودکار روشن می‌شود"</string>
     <string name="dark_ui_summary_off_auto_mode_custom_bedtime" msgid="7759826673214624622">"به‌طور خودکار در وقت خواب روشن می‌شود"</string>
+    <!-- no translation found for dark_ui_summary_off_auto_mode_modes (2672694802103388896) -->
+    <skip />
     <string name="dark_ui_summary_on_auto_mode_never" msgid="2468597062391435521">"هرگز به‌طور خودکار خاموش نمی‌شود"</string>
     <string name="dark_ui_summary_on_auto_mode_auto" msgid="5553376115092648636">"به‌طور خودکار در طلوع خاموش می‌شود"</string>
     <string name="dark_ui_summary_on_auto_mode_custom" msgid="2526935680241734784">"در ساعت <xliff:g id="ID_1">%1$s</xliff:g> به‌طور خودکار خاموش می‌شود"</string>
     <string name="dark_ui_summary_on_auto_mode_custom_bedtime" msgid="1976993025762551246">"به‌طور خودکار بعداز وقت خواب خاموش می‌شود"</string>
+    <!-- no translation found for dark_ui_summary_on_auto_mode_modes (7769594183411785087) -->
+    <skip />
     <string name="dark_ui_text" msgid="4392646155331126666">"«زمینه تاریک» در برخی صفحه‌ها از پس‌زمینه سیاه استفاده می‌کند تا شارژ باتری برای مدتی طولانی‌تر حفظ شود. «زمینه تاریک» تا زمانی که صفحه خاموش باشد، زمان انتظاری برای روشن شدن تنظیم می‌کند."</string>
     <string name="dark_ui_bedtime_footer_summary" msgid="5576501833145170581">"درحال‌حاضر، «زمینه تاریک» از زمان‌بندی «حالت وقت خواب» پیروی می‌کند"</string>
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"تنظیمات «حالت وقت خواب»"</string>
+    <!-- no translation found for dark_ui_modes_footer_summary (1041117250408363391) -->
+    <skip />
+    <!-- no translation found for dark_ui_modes_footer_action (80671811848446248) -->
+    <skip />
     <string name="even_dimmer_display_title" msgid="6731255736830410149">"کم‌نورتر"</string>
     <string name="even_dimmer_display_summary" msgid="120301078873242172">"به دستگاه اجازه داده می‌شود کم‌نورتر از حالت عادی شود"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"خاموش شدن صفحه"</string>
@@ -1948,7 +1956,8 @@
     <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"کلیک پایین راست"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"برای گزینه‌های بیشتر، روی پایین گوشه راست صفحه لمسی کلیک کنید"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"سرعت اشاره‌گر"</string>
-    <string name="pointer_fill_style" msgid="8413840032931637595">"سبک رنگ نشانگر"</string>
+    <!-- no translation found for pointer_fill_style (8794616790175016092) -->
+    <skip />
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"تغییر سبک رنگ نشانگر به سیاه"</string>
     <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"تغییر سبک رنگ نشانگر به سبز"</string>
     <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"تغییر سبک رنگ نشانگر به زرد"</string>
@@ -2065,6 +2074,12 @@
     <string name="general_category_title" msgid="6298579528716834157">"کلی"</string>
     <string name="display_category_title" msgid="6638191682294461408">"نمایشگر"</string>
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"رنگ و حرکت"</string>
+    <!-- no translation found for accessibility_pointer_and_touchpad_title (8719482393177273831) -->
+    <skip />
+    <!-- no translation found for accessibility_pointer_and_touchpad_summary (6089872217234956258) -->
+    <skip />
+    <!-- no translation found for accessibility_pointer_color_customization_title (3376392766113189508) -->
+    <skip />
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"کنتراست رنگ"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"کنتراست بیشتر باعث می‌شود متن، دکمه‌ها، و نمادها بیشتر برجسته شوند. کنتراستی را انتخاب کنید که به‌نظرتان بهترین است."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"ممکن است برخی‌از برنامه‌ها از همه تنظیمات کنتراست رنگ و متن پشتیبانی نکنند"</string>
@@ -2230,6 +2245,8 @@
     <string name="accessibility_button_opacity_title" msgid="4727355657530362289">"شفافیت وقتی استفاده نمی‌شود"</string>
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"شفاف"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"غیرشفاف"</string>
+    <!-- no translation found for accessibility_button_disabled_button_mode_summary (1978174613270619492) -->
+    <skip />
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"نوشتار با کنتراست بالا"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"رنگ نوشتار را به سیاه یا سفید تغییر می‌دهد. تضاد با پس‌زمینه را به‌حداکثر می‌رساند."</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_title" msgid="8737272017343509753">"بیشینه‌سازی کنتراست متن"</string>
@@ -5286,8 +5303,10 @@
     <string name="show_captions_enabled" msgid="7089043007924626">"روشن"</string>
     <string name="live_caption_disabled" msgid="3562035026547887366">"خاموش"</string>
     <string name="live_caption_enabled" msgid="5269360946200718949">"روشن"</string>
-    <string name="audio_seek_bar_state_left_first" msgid="8814986910920838972">"‏صدا %1$d%% چپ، %2$d%% راست"</string>
-    <string name="audio_seek_bar_state_right_first" msgid="1999368979633398876">"‏صدا %1$d%% راست، %2$d%% چپ"</string>
+    <!-- no translation found for audio_seek_bar_state_left_first (1641359989891833888) -->
+    <skip />
+    <!-- no translation found for audio_seek_bar_state_right_first (6027686565598201061) -->
+    <skip />
     <string name="about_phone_device_name_warning" msgid="3243226572404472381">"‏نام دستگاه شما برای برنامه‌هایی که نصب کرده‌اید قابل‌مشاهده است. همچنین ممکن است هنگام اتصال به دستگاه‌های بلوتوث، اتصال به شبکه Wi-Fi، یا راه‌اندازی نقطه اتصال Wi-Fi، برای افراد دیگر قابل‌مشاهده باشد."</string>
     <string name="grammatical_gender_title" msgid="8584242850477270828">"جنسیت دستوری"</string>
     <string name="grammatical_gender_dialog_title" msgid="8754048592099871587">"انتخاب جنسیت دستوری"</string>
