--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -1277,13 +1277,21 @@
     <string name="dark_ui_summary_off_auto_mode_auto" msgid="6766831395970887213">"સૂર્યાસ્ત સમયે ઑટોમૅટિક રીતે ચાલુ થઈ જશે"</string>
     <string name="dark_ui_summary_off_auto_mode_custom" msgid="1345906088326708376">"<xliff:g id="ID_1">%1$s</xliff:g> વાગ્યે ઑટોમૅટિક રીતે ચાલુ થઈ જશે"</string>
     <string name="dark_ui_summary_off_auto_mode_custom_bedtime" msgid="7759826673214624622">"સૂવાના સમયે ઑટોમૅટિક રીતે ચાલુ થશે"</string>
+    <!-- no translation found for dark_ui_summary_off_auto_mode_modes (2672694802103388896) -->
+    <skip />
     <string name="dark_ui_summary_on_auto_mode_never" msgid="2468597062391435521">"ક્યારેય ઑટોમૅટિક રીતે બંધ નહીં થાય"</string>
     <string name="dark_ui_summary_on_auto_mode_auto" msgid="5553376115092648636">"સૂર્યોદય સમયે ઑટોમૅટિક રીતે બંધ થઈ જશે"</string>
     <string name="dark_ui_summary_on_auto_mode_custom" msgid="2526935680241734784">"<xliff:g id="ID_1">%1$s</xliff:g> વાગ્યે ઑટોમૅટિક રીતે બંધ થઈ જશે"</string>
     <string name="dark_ui_summary_on_auto_mode_custom_bedtime" msgid="1976993025762551246">"સૂવાના સમય પછી ઑટોમૅટિક રીતે બંધ થશે"</string>
+    <!-- no translation found for dark_ui_summary_on_auto_mode_modes (7769594183411785087) -->
+    <skip />
     <string name="dark_ui_text" msgid="4392646155331126666">"અમુક સ્ક્રીન પર તમારી બૅટરીને વધુ લાંબો સમય ટકાવી રાખવામાં સહાય કરવા માટે ઘેરી થીમ કાળા બૅકગ્રાઉન્ડનો ઉપયોગ કરે છે. તમારી સ્ક્રીન બંધ ન થાય ત્યાં સુધી ઘેરી થીમ શેડ્યૂલ ચાલુ થવાની રાહ જુએ છે."</string>
     <string name="dark_ui_bedtime_footer_summary" msgid="5576501833145170581">"ઘેરી થીમ હાલમાં તમારા બેડટાઇમ મોડના શેડ્યૂલને અનુસરી રહી છે"</string>
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"બેડટાઇમ મોડનાં સેટિંગ"</string>
+    <!-- no translation found for dark_ui_modes_footer_summary (1041117250408363391) -->
+    <skip />
+    <!-- no translation found for dark_ui_modes_footer_action (80671811848446248) -->
+    <skip />
     <string name="even_dimmer_display_title" msgid="6731255736830410149">"હજી વધુ ઝાંખું"</string>
     <string name="even_dimmer_display_summary" msgid="120301078873242172">"ડિવાઇસને સામાન્ય કરતાં વધુ ઝાંખું થવા દો"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"સ્ક્રીનનો ઑટોમૅટિક સમાપ્તિ સમય"</string>
@@ -1948,7 +1956,8 @@
     <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"સૌથી નીચે-રાઇટ ક્લિક કરો"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"વધુ વિકલ્પો માટે, ટચપૅડના સૌથી નીચેના જમણા ખૂણા પર ક્લિક કરો"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"પૉઇન્ટરની ઝડપ"</string>
-    <string name="pointer_fill_style" msgid="8413840032931637595">"પૉઇન્ટર ફીલ શૈલી"</string>
+    <!-- no translation found for pointer_fill_style (8794616790175016092) -->
+    <skip />
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"પૉઇન્ટર ફીલ શૈલીને કાળામાં બદલો"</string>
     <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"પૉઇન્ટર ફીલ શૈલીને લીલામાં બદલો"</string>
     <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"પૉઇન્ટર ફીલ શૈલીને પીળામાં બદલો"</string>
@@ -2065,6 +2074,12 @@
     <string name="general_category_title" msgid="6298579528716834157">"સામાન્ય"</string>
     <string name="display_category_title" msgid="6638191682294461408">"ડિસ્પ્લે"</string>
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"રંગ અને મોશન"</string>
+    <!-- no translation found for accessibility_pointer_and_touchpad_title (8719482393177273831) -->
+    <skip />
+    <!-- no translation found for accessibility_pointer_and_touchpad_summary (6089872217234956258) -->
+    <skip />
+    <!-- no translation found for accessibility_pointer_color_customization_title (3376392766113189508) -->
+    <skip />
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"કલર કૉન્ટ્રાસ્ટ"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"ઉચ્ચ કૉન્ટ્રાસ્ટ એ ટેક્સ્ટ, બટન અને આઇકનને વધુ સ્પષ્ટ રીતે જોઈ શકવા માટે યોગ્ય બનાવે છે. તમારા માટે શ્રેષ્ઠતમ દેખાતો કૉન્ટ્રાસ્ટ પસંદ કરો."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"અમુક ઍપ કદાચ રંગ અને ટેક્સ્ટના કૉન્ટ્રાસ્ટ સંબંધિત બધા સેટિંગને સપોર્ટ ન કરે, તેવું બની શકે છે"</string>
@@ -2230,6 +2245,8 @@
     <string name="accessibility_button_opacity_title" msgid="4727355657530362289">"ઉપયોગમાં ન હોય ત્યારે પારદર્શિતા"</string>
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"પારદર્શક"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"અપારદર્શક"</string>
+    <!-- no translation found for accessibility_button_disabled_button_mode_summary (1978174613270619492) -->
+    <skip />
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"ઉચ્ચ કૉન્ટ્રાસ્ટ ટેક્સ્ટ"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"ટેક્સ્ટનો રંગ બદલીને કાળો અથવા સફેદ કરો. આને કારણે બૅકગ્રાઉન્ડ અનુસાર કૉન્ટ્રાસ્ટ વધી જાય છે."</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_title" msgid="8737272017343509753">"ટેક્સ્ટનો કૉન્ટ્રાસ્ટ મહત્તમ કરો"</string>
@@ -5286,8 +5303,10 @@
     <string name="show_captions_enabled" msgid="7089043007924626">"ચાલુ"</string>
     <string name="live_caption_disabled" msgid="3562035026547887366">"બંધ"</string>
     <string name="live_caption_enabled" msgid="5269360946200718949">"ચાલુ"</string>
-    <string name="audio_seek_bar_state_left_first" msgid="8814986910920838972">"ઑડિયો %1$d%% ડાબી બાજુ, %2$d%% જમણી બાજુ"</string>
-    <string name="audio_seek_bar_state_right_first" msgid="1999368979633398876">"ઑડિયો %1$d%% જમણી બાજુ, %2$d%% ડાબી બાજુ"</string>
+    <!-- no translation found for audio_seek_bar_state_left_first (1641359989891833888) -->
+    <skip />
+    <!-- no translation found for audio_seek_bar_state_right_first (6027686565598201061) -->
+    <skip />
     <string name="about_phone_device_name_warning" msgid="3243226572404472381">"તમે ઇન્સ્ટૉલ કરેલી ઍપ તમારા ડિવાઇસનું નામ જોઈ શકે છે. જ્યારે તમે બ્લૂટૂથ ડિવાઇસથી કનેક્ટ કરો, કોઈ વાઇ-ફાઇ નેટવર્કથી કનેક્ટ કરો અથવા કોઈ વાઇ-ફાઇ હૉટસ્પૉટ સેટઅપ કરો ત્યારે અન્ય લોકો પણ તે જોઈ શકે છે."</string>
     <string name="grammatical_gender_title" msgid="8584242850477270828">"વ્યાકરણ અનુસારનું લિંગ"</string>
     <string name="grammatical_gender_dialog_title" msgid="8754048592099871587">"વ્યાકરણ અનુસારનું લિંગ પસંદ કરો"</string>
