--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -1277,13 +1277,21 @@
     <string name="dark_ui_summary_off_auto_mode_auto" msgid="6766831395970887213">"ፀሐይ ስትጠልቅ በራስ-ሰር ይበራል"</string>
     <string name="dark_ui_summary_off_auto_mode_custom" msgid="1345906088326708376">"<xliff:g id="ID_1">%1$s</xliff:g> ላይ በራስ-ሰር ይበራል"</string>
     <string name="dark_ui_summary_off_auto_mode_custom_bedtime" msgid="7759826673214624622">"በመኝታ ሰዓት ላይ በራስ-ሰር ይበራል"</string>
+    <!-- no translation found for dark_ui_summary_off_auto_mode_modes (2672694802103388896) -->
+    <skip />
     <string name="dark_ui_summary_on_auto_mode_never" msgid="2468597062391435521">"በጭራሽ በራስ-ሰር አይጠፋም"</string>
     <string name="dark_ui_summary_on_auto_mode_auto" msgid="5553376115092648636">"ፀሐይ ስትወጣ በራስ-ሰር ይጠፋል"</string>
     <string name="dark_ui_summary_on_auto_mode_custom" msgid="2526935680241734784">"<xliff:g id="ID_1">%1$s</xliff:g> ላይ በራስ-ሰር ይጠፋል"</string>
     <string name="dark_ui_summary_on_auto_mode_custom_bedtime" msgid="1976993025762551246">"ከመኝታ ሰዓት በኋላ በራስ-ሰር ይጠፋል"</string>
+    <!-- no translation found for dark_ui_summary_on_auto_mode_modes (7769594183411785087) -->
+    <skip />
     <string name="dark_ui_text" msgid="4392646155331126666">"ጨለማ ገጽታ ላይ የባትሪ ዕድሜ እንዲራዘም ለማገዝ በአንዳንድ ማያ ገጾች ጥቁር ጀርባን ይጠቀማል። የጨለማ ገጽታ መርሐግብሮች ለመብራት ማያ ገጽዎ እስኪጠፋ ድረስ ይጠብቃሉ።"</string>
     <string name="dark_ui_bedtime_footer_summary" msgid="5576501833145170581">"ጠቆር ያለ ገጽታ በአሁኑ ጊዜ የእርስዎን የመኝታ ሰዓት ሁነታ መርሐግብር እየተከተለ ነው"</string>
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"የመኝታ ሰዓት ሁነታ ቅንብሮች"</string>
+    <!-- no translation found for dark_ui_modes_footer_summary (1041117250408363391) -->
+    <skip />
+    <!-- no translation found for dark_ui_modes_footer_action (80671811848446248) -->
+    <skip />
     <string name="even_dimmer_display_title" msgid="6731255736830410149">"የበለጠ ይደብዝዝ"</string>
     <string name="even_dimmer_display_summary" msgid="120301078873242172">"መሣሪያው ከወትሮው እንዲደበዝዝ ይፍቀዱለት"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"ማያ ጊዜው እረፍት"</string>
@@ -1948,7 +1956,8 @@
     <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"የታችኛው ቀኝ ጠቅታ"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"ለተጨማሪ አማራጮች የመዳሰሻ ሰሌዳውን የታችኛው ቀኝ ጠርዝ ጠቅ ያድርጉ"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"የጠቋሚ ፍጥነት"</string>
-    <string name="pointer_fill_style" msgid="8413840032931637595">"የጠቋሚ ሙሌት ቅጥ"</string>
+    <!-- no translation found for pointer_fill_style (8794616790175016092) -->
+    <skip />
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"የጠቋሚ ሙሌት ቅጥን ወደ ጥቁር ይለውጡ"</string>
     <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"የጠቋሚ ሙሌት ቅጥን ወደ አረንጓዴ ይለውጡ"</string>
     <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"የጠቋሚ ሙሌት ቅጥን ወደ ቢጫ ይለውጡ"</string>
@@ -2065,6 +2074,12 @@
     <string name="general_category_title" msgid="6298579528716834157">"አጠቃላይ"</string>
     <string name="display_category_title" msgid="6638191682294461408">"አሳይ"</string>
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"ቀለም እና እንቅስቃሴ"</string>
+    <!-- no translation found for accessibility_pointer_and_touchpad_title (8719482393177273831) -->
+    <skip />
+    <!-- no translation found for accessibility_pointer_and_touchpad_summary (6089872217234956258) -->
+    <skip />
+    <!-- no translation found for accessibility_pointer_color_customization_title (3376392766113189508) -->
+    <skip />
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"የቀለም ንጽጽር"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"ከፍተኛ ንፅፅር ጽሑፍን፣ አዝራሮችን እና አዶዎችን የበለጠ ጎልቶ እንዲታዩ ያደርጋል። ለእርስዎ የሚስማማውን ንፅፅር ይምረጡ።"</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"አንዳንድ መተግበሪያዎች ሁሉንም የቀለም እና የጽሑፍ ንፅፅር ቅንብሮችን ላይደግፉ ይችላሉ"</string>
@@ -2230,6 +2245,8 @@
     <string name="accessibility_button_opacity_title" msgid="4727355657530362289">"ጥቅም ላይ በማይውልበት ጊዜ ግልፅነት"</string>
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"ግልፅ"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"ግልፅ አይደልም"</string>
+    <!-- no translation found for accessibility_button_disabled_button_mode_summary (1978174613270619492) -->
+    <skip />
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"ከፍተኛ ንጽጽር ጽሁፍ"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"የጽሑፍ ቀለም ወደ ጥቁር ወይም ነጭ ይቀይሩ። ከዳራ ንፅፅርን ከፍ ያደርገዋል።"</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_title" msgid="8737272017343509753">"የጽሑፍ ንፅፅርን ያሳድጉ"</string>
@@ -5286,8 +5303,10 @@
     <string name="show_captions_enabled" msgid="7089043007924626">"በርቷል"</string>
     <string name="live_caption_disabled" msgid="3562035026547887366">"ጠፍቷል"</string>
     <string name="live_caption_enabled" msgid="5269360946200718949">"በርቷል"</string>
-    <string name="audio_seek_bar_state_left_first" msgid="8814986910920838972">"ኦዲዮ %1$d%% ግራ፣ %2$d%% ቀኝ"</string>
-    <string name="audio_seek_bar_state_right_first" msgid="1999368979633398876">"ኦዲዮ %1$d%% ቀኝ፣ %2$d%% ግራ"</string>
+    <!-- no translation found for audio_seek_bar_state_left_first (1641359989891833888) -->
+    <skip />
+    <!-- no translation found for audio_seek_bar_state_right_first (6027686565598201061) -->
+    <skip />
     <string name="about_phone_device_name_warning" msgid="3243226572404472381">"የመሣሪያዎ ስም በጫኗቸው መተግበሪያዎች ላይ ይታያል። እንዲሁም ከብሉቱዝ መሣሪያዎች ጋር ሲገናኙ፣ ከWi-Fi አውታረ መረብ ሲገናኙ ወይም የWi-Fi መገናኛ ነጥብን ሲያዋቅሩ በሌሎች ሰዎች ሊታይ ይችላል።"</string>
     <string name="grammatical_gender_title" msgid="8584242850477270828">"ሰዋሰዋዊ ጾታ"</string>
     <string name="grammatical_gender_dialog_title" msgid="8754048592099871587">"ሰዋሰዋዊ ጾታ ይምረጡ"</string>
