--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -1277,13 +1277,21 @@
     <string name="dark_ui_summary_off_auto_mode_auto" msgid="6766831395970887213">"সূৰ্যাস্তৰ সময়ত স্বয়ংক্ৰিয়ভাৱে অন হ’ব"</string>
     <string name="dark_ui_summary_off_auto_mode_custom" msgid="1345906088326708376">"<xliff:g id="ID_1">%1$s</xliff:g>ত স্বয়ংক্ৰিয়ভাৱে অন হ’ব"</string>
     <string name="dark_ui_summary_off_auto_mode_custom_bedtime" msgid="7759826673214624622">"শোৱাৰ সময়ত স্বয়ংক্ৰিয়ভাৱে অন হ’ব"</string>
+    <!-- no translation found for dark_ui_summary_off_auto_mode_modes (2672694802103388896) -->
+    <skip />
     <string name="dark_ui_summary_on_auto_mode_never" msgid="2468597062391435521">"কেতিয়াও স্বয়ংক্ৰিয়ভাৱে অফ নহ’ব"</string>
     <string name="dark_ui_summary_on_auto_mode_auto" msgid="5553376115092648636">"সূৰ্যোদয়ৰ সময়ত স্বয়ংক্ৰিয়ভাৱে অফ হ’ব"</string>
     <string name="dark_ui_summary_on_auto_mode_custom" msgid="2526935680241734784">"<xliff:g id="ID_1">%1$s</xliff:g> বজাত স্বয়ংক্ৰিয়ভাৱে অফ হ’ব"</string>
     <string name="dark_ui_summary_on_auto_mode_custom_bedtime" msgid="1976993025762551246">"শোৱাৰ সময়ৰ পাছত স্বয়ংক্ৰিয়ভাৱে অফ হ’ব"</string>
+    <!-- no translation found for dark_ui_summary_on_auto_mode_modes (7769594183411785087) -->
+    <skip />
     <string name="dark_ui_text" msgid="4392646155331126666">"আপোনাৰ বেটাৰীটোত চাৰ্জ কিছুমান স্ক্ৰীনত অধিক সময়ৰ বাবে ৰখাত সহায় কৰিবলৈ গাঢ় ৰঙৰ থীমে গাঢ় ক’লা ৰং ব্যৱহাৰ কৰে। গাঢ় ৰঙৰ থীমে আপোনাৰ স্ক্রীনখন অফ হোৱালৈ অপেক্ষা কৰিবলগীয়া সময় নিৰ্ধাৰণ কৰে।"</string>
     <string name="dark_ui_bedtime_footer_summary" msgid="5576501833145170581">"গাঢ় ৰঙৰ থীমে বৰ্তমান আপোনাৰ শোৱাৰ সময়ৰ ম\'ড অনুসৰণ কৰে"</string>
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"শোৱাৰ সময়ৰ ম’ডটোৰ ছেটিং"</string>
+    <!-- no translation found for dark_ui_modes_footer_summary (1041117250408363391) -->
+    <skip />
+    <!-- no translation found for dark_ui_modes_footer_action (80671811848446248) -->
+    <skip />
     <string name="even_dimmer_display_title" msgid="6731255736830410149">"আৰু অনুজ্জ্বল"</string>
     <string name="even_dimmer_display_summary" msgid="120301078873242172">"ডিভাইচটোক সচৰাচৰতকৈ অনুজ্জ্বল হ’বলৈ দিয়ক"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"স্ক্ৰীন টাইমআউট"</string>
@@ -1948,7 +1956,8 @@
     <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"সোঁফালে তলত ক্লিক কৰা"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"অধিক বিকল্পৰ বাবে টাচ্চপেডৰ একেবাৰে তলৰ সোঁকোণত ক্লিক কৰক"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"পইণ্টাৰৰ গতিবেগ"</string>
-    <string name="pointer_fill_style" msgid="8413840032931637595">"পইণ্টাৰ পূৰ কৰাৰ শৈলী"</string>
+    <!-- no translation found for pointer_fill_style (8794616790175016092) -->
+    <skip />
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"পইণ্টাৰ পূৰ কৰাৰ শৈলী ক’লা কৰক"</string>
     <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"পইণ্টাৰ পূৰ কৰাৰ শৈলী সেউজীয়া কৰক"</string>
     <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"পইণ্টাৰ পূৰ কৰাৰ শৈলী হালধীয়া কৰক"</string>
@@ -2065,6 +2074,12 @@
     <string name="general_category_title" msgid="6298579528716834157">"সাধাৰণ"</string>
     <string name="display_category_title" msgid="6638191682294461408">"ডিছপ্লে’"</string>
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"ৰং আৰু ম’শ্বন"</string>
+    <!-- no translation found for accessibility_pointer_and_touchpad_title (8719482393177273831) -->
+    <skip />
+    <!-- no translation found for accessibility_pointer_and_touchpad_summary (6089872217234956258) -->
+    <skip />
+    <!-- no translation found for accessibility_pointer_color_customization_title (3376392766113189508) -->
+    <skip />
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"ৰঙৰ কনট্ৰাষ্ট"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"উচ্চ কনট্ৰাষ্টে পাঠ, বুটাম আৰু চিহ্নসমূহক অধিক জিলিকাই ৰাখে। আপোনাৰ যিটো কনট্ৰাষ্ট আটাইতকৈ ভাল লাগে সেইটো বাছনি কৰক।"</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"কিছুমান এপে আটাইবোৰ ৰং আৰু পাঠৰ কনট্ৰাষ্টৰ ছেটিং সমৰ্থন নকৰিবও পাৰে"</string>
@@ -2230,6 +2245,8 @@
     <string name="accessibility_button_opacity_title" msgid="4727355657530362289">"ব্যৱহাৰ নহ’লে হোৱা স্বচ্ছতা"</string>
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"স্বচ্ছ"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"স্বচ্ছ নহয়"</string>
+    <!-- no translation found for accessibility_button_disabled_button_mode_summary (1978174613270619492) -->
+    <skip />
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"ৰঙৰ উচ্চ প্ৰভেদযুক্ত পাঠ"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"পাঠৰ ৰং ক’লা অথবা বগালৈ সলনি কৰক। পটভূমিৰ সৈতে কনট্ৰাষ্ট বৃদ্ধি কৰে।"</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_title" msgid="8737272017343509753">"পাঠৰ কনট্ৰাষ্ট সৰ্বাধিক কৰক"</string>
@@ -5286,8 +5303,10 @@
     <string name="show_captions_enabled" msgid="7089043007924626">"অন আছে"</string>
     <string name="live_caption_disabled" msgid="3562035026547887366">"অফ আছে"</string>
     <string name="live_caption_enabled" msgid="5269360946200718949">"অন আছে"</string>
-    <string name="audio_seek_bar_state_left_first" msgid="8814986910920838972">"অডিঅ’ %1$d%% বাওঁ, %2$d%% সোঁ"</string>
-    <string name="audio_seek_bar_state_right_first" msgid="1999368979633398876">"অডিঅ’ %1$d%% সোঁ, %2$d%% বাওঁ"</string>
+    <!-- no translation found for audio_seek_bar_state_left_first (1641359989891833888) -->
+    <skip />
+    <!-- no translation found for audio_seek_bar_state_right_first (6027686565598201061) -->
+    <skip />
     <string name="about_phone_device_name_warning" msgid="3243226572404472381">"আপোনাৰ ডিভাইচৰ নাম আপুনি ইনষ্টল কৰা এপত দেখা পোৱা যায়। আপুনি ব্লুটুথ ডিভাইচৰ সৈতে সংযোগ কৰিলে, ৱাই-ফাই নেটৱৰ্কৰ সৈতে সংযোগ কৰিলে অথবা ৱাই-ফাই হটস্পট ছেট আপ কৰিলে এইটো অন্য লোকেও দেখা পাব পাৰে।"</string>
     <string name="grammatical_gender_title" msgid="8584242850477270828">"ব্যাকৰণ বিষয়ক লিংগ"</string>
     <string name="grammatical_gender_dialog_title" msgid="8754048592099871587">"ব্যাকৰণ বিষয়ক লিংগ বাছনি কৰক"</string>
