--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -834,14 +834,10 @@
     <string name="bluetooth_scanning_on_info_message" msgid="786648535600075223">"Bluetooth aktiv olduqda cihaz yaxınlıqdakı digər Bluetooth cihazları ilə bağlantı qura bilər.\n\nCihaz təcrübəsini yaxşılaşdırmaq üçün tətbiq və xidmətlər hətta Bluetooth deaktiv olduqda belə istənilən vaxt yaxınlıqdakı cihazları skan edə bilər. Bu, məsələn, məkan əsaslı funksiya və xidmətləri yaxşılaşdırmaq üçün istifadə oluna bilər. Bunu Bluetooth skanlama ayarlarında dəyişə bilərsiniz."</string>
     <string name="bluetooth_scanning_on_info_message_auto_on_available" msgid="7792443293031247638">"Bluetooth aktiv olduqda cihaz yaxınlıqdakı Bluetooth cihazları ilə bağlantı qura bilər. Cəld Paylaşım və Cihazın Tapılması kimi funksiyalar Bluetooth istifadə edir.\n\nTətbiq və xidmətlər istənilən vaxt, hətta Bluetooth deaktiv olsa belə, yaxınlıqdakı cihazları skanlaya bilər. Bu, məsələn, məkan əsaslı funksiya və xidmətləri təkmilləşdirmək üçün istifadə edilə bilər. Bluetooth ilə skan ayarlarında bunu dəyişə bilərsiniz."</string>
     <string name="bluetooth_scan_change" msgid="1744636222637390367">"Dəyişin"</string>
-    <!-- no translation found for bluetooth_key_missing_title (7799054163548353853) -->
-    <skip />
-    <!-- no translation found for bluetooth_key_missing_message (2388861106663695319) -->
-    <skip />
-    <!-- no translation found for bluetooth_key_missing_forget (4692006517823001013) -->
-    <skip />
-    <!-- no translation found for bluetooth_key_missing_cancel (2482416446357804371) -->
-    <skip />
+    <string name="bluetooth_key_missing_title" msgid="7799054163548353853">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> qoşulmayıb"</string>
+    <string name="bluetooth_key_missing_message" msgid="2388861106663695319">"Təhlükəsizliyiniz üçün bu cihazı unudun, sonra yenidən qoşun"</string>
+    <string name="bluetooth_key_missing_forget" msgid="4692006517823001013">"Cihazı unudun"</string>
+    <string name="bluetooth_key_missing_cancel" msgid="2482416446357804371">"Ləğv edin"</string>
     <string name="device_details_title" msgid="1155622417516195481">"Cihaz məlumatları"</string>
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"Klaviatura ayarları"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"Digər ayarlar"</string>
@@ -1281,13 +1277,21 @@
     <string name="dark_ui_summary_off_auto_mode_auto" msgid="6766831395970887213">"Gün batanda avtomatik aktiv olacaq"</string>
     <string name="dark_ui_summary_off_auto_mode_custom" msgid="1345906088326708376">"Bu vaxt avtomatik aktiv olacaq: <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_summary_off_auto_mode_custom_bedtime" msgid="7759826673214624622">"Yuxu vaxtı başladıqda avtomatik aktiv olacaq"</string>
+    <!-- no translation found for dark_ui_summary_off_auto_mode_modes (2672694802103388896) -->
+    <skip />
     <string name="dark_ui_summary_on_auto_mode_never" msgid="2468597062391435521">"Heç vaxt avtomatik deaktiv olmayacaq"</string>
     <string name="dark_ui_summary_on_auto_mode_auto" msgid="5553376115092648636">"Gün çıxanda avtomatik deaktiv olacaq"</string>
     <string name="dark_ui_summary_on_auto_mode_custom" msgid="2526935680241734784">"Bu vaxt avtomatik deaktiv olacaq: <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_summary_on_auto_mode_custom_bedtime" msgid="1976993025762551246">"Yuxu vaxtı bitdikdə avtomatik deaktiv olacaq"</string>
+    <!-- no translation found for dark_ui_summary_on_auto_mode_modes (7769594183411785087) -->
+    <skip />
     <string name="dark_ui_text" msgid="4392646155331126666">"Qara fonlu tünd tema enerjiyə qənaət məqsədilə istifadə edilir. Tünd temanın aktiv olma vaxtı gələndə ekran sönməyibsə, yalnız ekran sönəndən sonra aktiv olacaq."</string>
     <string name="dark_ui_bedtime_footer_summary" msgid="5576501833145170581">"Tünd tema hazırda Yuxu vaxtı rejimi cədvəlinizi izləyir"</string>
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"Yuxu vaxtı rejimi ayarları"</string>
+    <!-- no translation found for dark_ui_modes_footer_summary (1041117250408363391) -->
+    <skip />
+    <!-- no translation found for dark_ui_modes_footer_action (80671811848446248) -->
+    <skip />
     <string name="even_dimmer_display_title" msgid="6731255736830410149">"Daha qaranlıq"</string>
     <string name="even_dimmer_display_summary" msgid="120301078873242172">"Cihazın həmişəkindən daha çox qaralmasına icazə verin"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"Avtomatik ekran sönməsi"</string>
@@ -1952,7 +1956,8 @@
     <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"Aşağı sağ tərəfə klikləyin"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"Digər seçimlər üçün taçpedin aşağı sağ küncünə klikləyin"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Kursor sürəti"</string>
-    <string name="pointer_fill_style" msgid="8413840032931637595">"Poynter doldurma üslubu"</string>
+    <!-- no translation found for pointer_fill_style (8794616790175016092) -->
+    <skip />
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Poynter doldurma üslubunu qaraya dəyişin"</string>
     <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"Poynter doldurma üslubunu yaşıla dəyişin"</string>
     <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"Poynter doldurma üslubunu sarıya dəyişin"</string>
@@ -1999,10 +2004,8 @@
     <string name="modifier_keys_reset" msgid="551170906710422041">"Sıfırlayın"</string>
     <string name="modifier_keys_picker_title" msgid="244545904150587851">"Dəyişdirici açarı seçin"</string>
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"<xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g> üçün yeni açar seçin:"</string>
-    <!-- no translation found for keyboard_a11y_settings (2564659018555385728) -->
-    <skip />
-    <!-- no translation found for keyboard_a11y_settings_summary (1698531156574098722) -->
-    <skip />
+    <string name="keyboard_a11y_settings" msgid="2564659018555385728">"Fiziki klaviatura əlçatanlığı"</string>
+    <string name="keyboard_a11y_settings_summary" msgid="1698531156574098722">"Əvəzedici düymələr, sıçrama düymələri, maus düymələri"</string>
     <string name="ime_label_title" msgid="8994569521516807168">"<xliff:g id="IME_LABEL">%s</xliff:g> düzəni"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"Defolt"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"Avtomatik: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2071,6 +2074,12 @@
     <string name="general_category_title" msgid="6298579528716834157">"Ümumi"</string>
     <string name="display_category_title" msgid="6638191682294461408">"Ekran"</string>
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"Rəng və hərəkət"</string>
+    <!-- no translation found for accessibility_pointer_and_touchpad_title (8719482393177273831) -->
+    <skip />
+    <!-- no translation found for accessibility_pointer_and_touchpad_summary (6089872217234956258) -->
+    <skip />
+    <!-- no translation found for accessibility_pointer_color_customization_title (3376392766113189508) -->
+    <skip />
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"Rəng kontrastı"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"Yüksək kontrast mətn, düymələr və ikonaları fərqləndirir. Ən yaxşı görünən kontrastı seçin."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"Bəzi tətbiqlər bütün rəng və mətn kontrastı ayarlarını dəstəkləməyə bilər"</string>
@@ -2214,11 +2223,9 @@
     <string name="accessibility_shortcut_edit_dialog_title_advance" msgid="4567868630655591506">"Qabaqcıl"</string>
     <string name="accessibility_screen_magnification_navbar_configuration_warning" msgid="266736851606791552">"Əlçatımlılıq düyməsi <xliff:g id="SERVICE">%1$s</xliff:g> xidmətinə ayarlanıb. Böyütməni istifadə etmək üçün Əlçatımlılıq düyməsinə toxunaraq basıb saxlayın, daha sonra böyütmə seçin."</string>
     <string name="accessibility_screen_magnification_gesture_navigation_warning" msgid="991017769735632046">"Əlçatımlılıq jesti <xliff:g id="SERVICE">%1$s</xliff:g> funksiyasına ayarlanıb. Miqyasdan istifadə etmək üçün ekranın yuxarısndan iki barmağınızla sürüşdürüb saxlayın. Sonra miqyası seçin."</string>
-    <!-- no translation found for accessibility_global_gesture_preference_title (8866765674372344850) -->
-    <skip />
+    <string name="accessibility_global_gesture_preference_title" msgid="8866765674372344850">"Səs düymələri qısayolu"</string>
     <string name="accessibility_shortcut_settings" msgid="836783442658447995">"Qısayol ayarları"</string>
-    <!-- no translation found for accessibility_shortcut_service_on_lock_screen_title (2301019277262462426) -->
-    <skip />
+    <string name="accessibility_shortcut_service_on_lock_screen_title" msgid="2301019277262462426">"Kilid ekranından səs düymələri qısayolu"</string>
     <string name="accessibility_shortcut_description" msgid="2184693606202133549">"Funksiya qısayolunun kilid ekranından aktiv edilməsinə icazə verin. Hər iki səs səviyyəsi düyməsinə bir neçə saniyəlik basıb saxlayın."</string>
     <string name="accessibility_button_title" msgid="5251235485581552614">"Xüsusi imkanlar düyməsi"</string>
     <string name="accessibility_button_gesture_title" msgid="3573456209050374139">"Jest və xüsusi imkanlar düyməsi"</string>
@@ -2238,6 +2245,8 @@
     <string name="accessibility_button_opacity_title" msgid="4727355657530362289">"Düymənin şəffaflığı"</string>
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"Şəffaf"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"Qeyri-şəffaf"</string>
+    <!-- no translation found for accessibility_button_disabled_button_mode_summary (1978174613270619492) -->
+    <skip />
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"Yüksək kontrastlı mətn"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"Mətnin rəngini qara və ya ağ edin. Arxa fonla kontrastı maksimum dərəcədə artırır."</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_title" msgid="8737272017343509753">"Mətn kontrastını artırın"</string>
@@ -4112,8 +4121,7 @@
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Bu tətbiq tərəfindən yaradılmış bütün Narahat Etməyin qaydaları silinəcək."</string>
     <string name="zen_modes_access_warning_dialog_title" msgid="8372164559156809659">"<xliff:g id="APP">%1$s</xliff:g> üçün Rejimlərə girişə icazə verilsin?"</string>
     <string name="zen_modes_access_warning_dialog_summary" msgid="2432178679607798200">"Tətbiq \"Narahat Etməyin\" rejimini aktiv/deaktiv edə, Rejimləri idarə edə və aktivləşdirə, habelə əlaqədar ayarlara dəyişiklik edə biləcək."</string>
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (189454396436517964) -->
-    <skip />
+    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="189454396436517964">"<xliff:g id="APP">%1$s</xliff:g> üçün Rejimlərə giriş ləğv edilsin?"</string>
     <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"Bu tətbiq tərəfindən yaradılmış bütün rejimlər silinəcək."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Optimallaşdırmayın"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Optimallaşdırın"</string>
@@ -5295,8 +5303,10 @@
     <string name="show_captions_enabled" msgid="7089043007924626">"Aktiv"</string>
     <string name="live_caption_disabled" msgid="3562035026547887366">"Deaktiv"</string>
     <string name="live_caption_enabled" msgid="5269360946200718949">"Aktiv"</string>
-    <string name="audio_seek_bar_state_left_first" msgid="8814986910920838972">"Audio %1$d%% sol, %2$d%% sağ"</string>
-    <string name="audio_seek_bar_state_right_first" msgid="1999368979633398876">"Audio %1$d%% sağ, %2$d%% sol"</string>
+    <!-- no translation found for audio_seek_bar_state_left_first (1641359989891833888) -->
+    <skip />
+    <!-- no translation found for audio_seek_bar_state_right_first (6027686565598201061) -->
+    <skip />
     <string name="about_phone_device_name_warning" msgid="3243226572404472381">"Cihaz adı quraşdırdığınız tətbiqlərə görünür. Bluetooth cihazlarına, Wi-Fi şəbəkəsinə qoşulduqda və ya Wi-Fi hotspotu ayarladıqda digər şəxslər də onu görə bilər."</string>
     <string name="grammatical_gender_title" msgid="8584242850477270828">"Cins (qrammatika)"</string>
     <string name="grammatical_gender_dialog_title" msgid="8754048592099871587">"Cins (qrammatika) seçin"</string>
