--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -834,14 +834,10 @@
     <string name="bluetooth_scanning_on_info_message" msgid="786648535600075223">"Όταν είναι ενεργό το Bluetooth, η συσκευή σας μπορεί να επικοινωνεί με άλλες κοντινές συσκευές Bluetooth.\n\nΓια τη βελτίωση της εμπειρίας χρήσης της συσκευής, οι εφαρμογές και οι υπηρεσίες μπορούν ακόμα να πραγματοποιούν σάρωση για συσκευές σε κοντινή απόσταση ανά πάσα στιγμή, ακόμα και όταν το Bluetooth είναι απενεργοποιημένο. Αυτή η λειτουργία μπορεί να χρησιμοποιηθεί, για παράδειγμα, για τη βελτίωση λειτουργιών και υπηρεσιών που εκτελούνται βάσει τοποθεσίας. Μπορείτε να αλλάξετε αυτή την επιλογή στις ρυθμίσεις σάρωσης Bluetooth."</string>
     <string name="bluetooth_scanning_on_info_message_auto_on_available" msgid="7792443293031247638">"Όταν είναι ενεργοποιημένο το Bluetooth, η συσκευή σας μπορεί να επικοινωνεί με άλλες συσκευές Bluetooth σε κοντινή απόσταση. Λειτουργίες όπως το Quick Share και η Εύρεση συσκευής χρησιμοποιούν το Bluetooth.\n\nΟι εφαρμογές και οι υπηρεσίες μπορούν ακόμα να πραγματοποιούν σάρωση για συσκευές σε κοντινή απόσταση ανά πάσα στιγμή, ακόμα και όταν το Bluetooth είναι απενεργοποιημένο. Αυτό μπορεί να χρησιμοποιηθεί, για παράδειγμα, για τη βελτίωση λειτουργιών και υπηρεσιών που εκτελούνται βάσει τοποθεσίας. Μπορείτε να αλλάξετε αυτή την επιλογή στις ρυθμίσεις σάρωσης Bluetooth."</string>
     <string name="bluetooth_scan_change" msgid="1744636222637390367">"Αλλαγή"</string>
-    <!-- no translation found for bluetooth_key_missing_title (7799054163548353853) -->
-    <skip />
-    <!-- no translation found for bluetooth_key_missing_message (2388861106663695319) -->
-    <skip />
-    <!-- no translation found for bluetooth_key_missing_forget (4692006517823001013) -->
-    <skip />
-    <!-- no translation found for bluetooth_key_missing_cancel (2482416446357804371) -->
-    <skip />
+    <string name="bluetooth_key_missing_title" msgid="7799054163548353853">"Η συσκευή <xliff:g id="DEVICE_NAME">%1$s</xliff:g> δεν έχει συνδεθεί"</string>
+    <string name="bluetooth_key_missing_message" msgid="2388861106663695319">"Για την ασφάλειά σας, καταργήστε τη σύζευξη αυτής της συσκευής και στη συνέχεια πραγματοποιήστε ξανά τη σύζευξή της"</string>
+    <string name="bluetooth_key_missing_forget" msgid="4692006517823001013">"Κατάργηση σύζευξης συσκευής"</string>
+    <string name="bluetooth_key_missing_cancel" msgid="2482416446357804371">"Ακύρωση"</string>
     <string name="device_details_title" msgid="1155622417516195481">"Λεπτομέρειες συσκευής"</string>
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"Ρυθμίσεις πληκτρολογίου"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"Περισσότερες ρυθμίσεις"</string>
@@ -1281,13 +1277,17 @@
     <string name="dark_ui_summary_off_auto_mode_auto" msgid="6766831395970887213">"Θα ενεργοποιείται αυτόματα με τη δύση του ηλίου"</string>
     <string name="dark_ui_summary_off_auto_mode_custom" msgid="1345906088326708376">"Θα ενεργοποιείται αυτόματα στις <xliff:g id="ID_1">%1$s</xliff:g>."</string>
     <string name="dark_ui_summary_off_auto_mode_custom_bedtime" msgid="7759826673214624622">"Θα ενεργοποιηθεί αυτόματα κατά την ώρα ύπνου"</string>
+    <string name="dark_ui_summary_off_auto_mode_modes" msgid="2672694802103388896">"Θα ενεργοποιηθεί, όταν ξεκινήσει η λειτουργία <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_summary_on_auto_mode_never" msgid="2468597062391435521">"Δεν θα απενεργοποιείται ποτέ αυτόματα"</string>
     <string name="dark_ui_summary_on_auto_mode_auto" msgid="5553376115092648636">"Θα απενεργοποιείται αυτόματα κατά την ανατολή του ηλίου"</string>
     <string name="dark_ui_summary_on_auto_mode_custom" msgid="2526935680241734784">"Θα απενεργοποιείται αυτόματα στις <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_summary_on_auto_mode_custom_bedtime" msgid="1976993025762551246">"Θα απενεργοποιηθεί αυτόματα μετά την ώρα ύπνου"</string>
+    <string name="dark_ui_summary_on_auto_mode_modes" msgid="7769594183411785087">"Θα απενεργοποιηθεί, όταν λήξει η λειτουργία <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_text" msgid="4392646155331126666">"Το Σκούρο θέμα χρησιμοποιεί μαύρο φόντο, για να συμβάλλει στην αύξηση της διάρκειας της μπαταρίας σε ορισμένες οθόνες. Τα χρονοδιαγράμματα για το Σκούρο θέμα περιμένουν να σβήσει η οθόνη, για να ενεργοποιηθούν."</string>
     <string name="dark_ui_bedtime_footer_summary" msgid="5576501833145170581">"Αυτήν τη στιγμή, το Σκούρο θέμα ακολουθεί το πρόγραμμα της λειτουργίας Ώρα για ύπνο"</string>
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"Ρυθμίσεις λειτουργίας Ώρα για ύπνο"</string>
+    <string name="dark_ui_modes_footer_summary" msgid="1041117250408363391">"{count,plural,offset:2 =0{Οι λειτουργίες μπορούν επίσης να ενεργοποιούν το σκούρο θέμα}=1{Η λειτουργία {mode_1} ενεργοποιεί επίσης το σκούρο θέμα}=2{Οι λειτουργίες {mode_1} και {mode_2} ενεργοποιούν επίσης το σκούρο θέμα}=3{Οι λειτουργίες {mode_1}, {mode_2} και {mode_3} ενεργοποιούν επίσης το σκούρο θέμα}other{Οι λειτουργίες {mode_1}, {mode_2} και # ακόμη ενεργοποιούν επίσης το σκούρο θέμα}}"</string>
+    <string name="dark_ui_modes_footer_action" msgid="80671811848446248">"Ρυθμίσεις λειτουργιών"</string>
     <string name="even_dimmer_display_title" msgid="6731255736830410149">"Ακόμα χαμηλότερη φωτεινότητα"</string>
     <string name="even_dimmer_display_summary" msgid="120301078873242172">"Να επιτρέπεται χαμηλότερη φωτεινότητα στη συσκευή απ\' ό,τι συνήθως"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"Λήξη χρονικού ορίου οθόνης"</string>
@@ -1952,7 +1952,8 @@
     <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"Πατήστε κάτω δεξιά για δεξί κλικ"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"Πατήστε κάτω δεξιά στην επιφάνεια αφής για άλλες επιλογές"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Ταχύτητα δείκτη"</string>
-    <string name="pointer_fill_style" msgid="8413840032931637595">"Στιλ γεμίσματος δείκτη"</string>
+    <!-- no translation found for pointer_fill_style (8794616790175016092) -->
+    <skip />
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Αλλαγή στιλ γεμίσμ. δείκτη σε μαύρο"</string>
     <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"Αλλαγή στιλ γεμίσ. δείκ. σε πράσινο"</string>
     <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"Αλλαγή στιλ γεμίσ. δείκ. σε κίτρινο"</string>
@@ -1999,10 +2000,8 @@
     <string name="modifier_keys_reset" msgid="551170906710422041">"Επαναφορά"</string>
     <string name="modifier_keys_picker_title" msgid="244545904150587851">"Επιλέξτε πλήκτρο τροποποίησης"</string>
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"Επιλέξτε ένα νέο κλειδί για <xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g>:"</string>
-    <!-- no translation found for keyboard_a11y_settings (2564659018555385728) -->
-    <skip />
-    <!-- no translation found for keyboard_a11y_settings_summary (1698531156574098722) -->
-    <skip />
+    <string name="keyboard_a11y_settings" msgid="2564659018555385728">"Προσβασιμότητα φυσικού πληκτρολογίου"</string>
+    <string name="keyboard_a11y_settings_summary" msgid="1698531156574098722">"Ασύγχρονα πλήκτρα, Ελαστικά πλήκτρα, Πλήκτρα ποντικιού"</string>
     <string name="ime_label_title" msgid="8994569521516807168">"Διάταξη <xliff:g id="IME_LABEL">%s</xliff:g>"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"Προεπιλογή"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"Αυτόματο: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2071,6 +2070,12 @@
     <string name="general_category_title" msgid="6298579528716834157">"Γενικά"</string>
     <string name="display_category_title" msgid="6638191682294461408">"Οθόνη"</string>
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"Χρώμα και κίνηση"</string>
+    <!-- no translation found for accessibility_pointer_and_touchpad_title (8719482393177273831) -->
+    <skip />
+    <!-- no translation found for accessibility_pointer_and_touchpad_summary (6089872217234956258) -->
+    <skip />
+    <!-- no translation found for accessibility_pointer_color_customization_title (3376392766113189508) -->
+    <skip />
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"Χρωματική αντίθεση"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"Η υψηλότερη αντίθεση επιτρέπει στο κείμενο, τα κουμπιά και τα εικονίδια να ξεχωρίζουν περισσότερο. Επιλέξτε την αντίθεση που προτιμάτε."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"Ορισμένες εφαρμογές μπορεί να μην υποστηρίζουν όλες τις ρυθμίσεις χρώματος και αντίθεσης κειμένου"</string>
@@ -2214,11 +2219,9 @@
     <string name="accessibility_shortcut_edit_dialog_title_advance" msgid="4567868630655591506">"Σύνθετες"</string>
     <string name="accessibility_screen_magnification_navbar_configuration_warning" msgid="266736851606791552">"Το κουμπί Προσβασιμότητας έχει οριστεί σε <xliff:g id="SERVICE">%1$s</xliff:g>. Για να χρησιμοποιήσετε τη μεγέθυνση, αγγίξτε παρατεταμένα το κουμπί Προσβασιμότητας και έπειτα επιλέξτε να κάνετε μεγέθυνση."</string>
     <string name="accessibility_screen_magnification_gesture_navigation_warning" msgid="991017769735632046">"Η κίνηση προσβασιμότητας ορίστηκε στην υπηρεσία <xliff:g id="SERVICE">%1$s</xliff:g>. Για να χρησιμοποιήσετε τη μεγιστοποίηση, σύρετε παρατεταμένα προς τα επάνω με δύο δάχτυλα από το κάτω μέρος της οθόνης και μην τα απομακρύνετε από την οθόνη. Στη συνέχεια, επιλέξτε μεγιστοποίηση."</string>
-    <!-- no translation found for accessibility_global_gesture_preference_title (8866765674372344850) -->
-    <skip />
+    <string name="accessibility_global_gesture_preference_title" msgid="8866765674372344850">"Συντόμευση κουμπιών έντασης ήχου"</string>
     <string name="accessibility_shortcut_settings" msgid="836783442658447995">"Ρυθμίσεις συντόμευσης"</string>
-    <!-- no translation found for accessibility_shortcut_service_on_lock_screen_title (2301019277262462426) -->
-    <skip />
+    <string name="accessibility_shortcut_service_on_lock_screen_title" msgid="2301019277262462426">"Συντ. κουμπιών έντασης ήχου από οθόνη κλειδώματος"</string>
     <string name="accessibility_shortcut_description" msgid="2184693606202133549">"Να επιτρέπεται η ενεργοποίηση της συντόμευσης λειτουργιών από την οθόνη κλειδώματος. Πατήστε παρατεταμένα ταυτόχρονα τα πλήκτρα έντασης ήχου για μερικά δευτερόλεπτα."</string>
     <string name="accessibility_button_title" msgid="5251235485581552614">"Κουμπί προσβασιμότητας"</string>
     <string name="accessibility_button_gesture_title" msgid="3573456209050374139">"Κουμπί και κίνηση προσβασιμότητας"</string>
@@ -2238,6 +2241,7 @@
     <string name="accessibility_button_opacity_title" msgid="4727355657530362289">"Διαφανές όταν δεν χρησιμοποιείται"</string>
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"Διαφανές"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"Μη διαφανές"</string>
+    <string name="accessibility_button_disabled_button_mode_summary" msgid="1978174613270619492">"Μη διαθ. με κουμπί γραμμής πλοήγησης."</string>
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"Κείμενο υψηλής αντίθεσης"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"Αλλαγή χρώματος του κειμένου σε μαύρο ή λευκό. Μεγιστοποιεί την αντίθεση με το φόντο."</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_title" msgid="8737272017343509753">"Μεγιστοποίηση αντίθεσης κειμένου"</string>
@@ -4112,8 +4116,7 @@
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Όλοι οι κανόνες της λειτουργίας \"Μην ενοχλείτε\" που δημιουργήθηκαν από αυτή την εφαρμογή θα καταργηθούν."</string>
     <string name="zen_modes_access_warning_dialog_title" msgid="8372164559156809659">"Να επιτρέπεται η πρόσβαση στις λειτουργίες για την εφαρμογή <xliff:g id="APP">%1$s</xliff:g>;"</string>
     <string name="zen_modes_access_warning_dialog_summary" msgid="2432178679607798200">"Η εφαρμογή θα είναι σε θέση να ενεργοποιεί/απενεργοποιεί τη λειτουργία Μην ενοχλείτε, να διαχειρίζεται και να ενεργοποιεί λειτουργίες και να αλλάζει σχετικές ρυθμίσεις."</string>
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (189454396436517964) -->
-    <skip />
+    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="189454396436517964">"Να ανακληθεί η πρόσβαση στις Λειτουργίες για την εφαρμογή <xliff:g id="APP">%1$s</xliff:g>;"</string>
     <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"Όλες οι λειτουργίες που δημιουργήθηκαν από αυτή την εφαρμογή θα καταργηθούν."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Να μη γίνει βελτιστοποίηση"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Βελτιστοποίηση"</string>
@@ -5295,8 +5298,10 @@
     <string name="show_captions_enabled" msgid="7089043007924626">"Ενεργή"</string>
     <string name="live_caption_disabled" msgid="3562035026547887366">"Ανενεργή"</string>
     <string name="live_caption_enabled" msgid="5269360946200718949">"Ενεργή"</string>
-    <string name="audio_seek_bar_state_left_first" msgid="8814986910920838972">"Ήχος %1$d%% αριστερά, %2$d%% δεξιά"</string>
-    <string name="audio_seek_bar_state_right_first" msgid="1999368979633398876">"Ήχος %1$d%% δεξιά, %2$d%% αριστερά"</string>
+    <!-- no translation found for audio_seek_bar_state_left_first (1641359989891833888) -->
+    <skip />
+    <!-- no translation found for audio_seek_bar_state_right_first (6027686565598201061) -->
+    <skip />
     <string name="about_phone_device_name_warning" msgid="3243226572404472381">"Το όνομα της συσκευής σας είναι ορατό στις εφαρμογές που εγκαθιστάτε. Ενδέχεται επίσης να είναι ορατό και σε άλλα άτομα, όταν συνδέεστε σε συσκευές Bluetooth, συνδέεστε σε ένα δίκτυο Wi-Fi ή ρυθμίζετε ένα σημείο πρόσβασης Wi-Fi."</string>
     <string name="grammatical_gender_title" msgid="8584242850477270828">"Γραμματικό γένος"</string>
     <string name="grammatical_gender_dialog_title" msgid="8754048592099871587">"Επιλογή γραμματικού γένους"</string>
