--- a/res/values-en-rCA/strings.xml
+++ b/res/values-en-rCA/strings.xml
@@ -1277,13 +1277,17 @@
     <string name="dark_ui_summary_off_auto_mode_auto" msgid="6766831395970887213">"Will turn on automatically at sunset"</string>
     <string name="dark_ui_summary_off_auto_mode_custom" msgid="1345906088326708376">"Will turn on automatically at <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_summary_off_auto_mode_custom_bedtime" msgid="7759826673214624622">"Will turn on automatically at bedtime"</string>
+    <string name="dark_ui_summary_off_auto_mode_modes" msgid="2672694802103388896">"Will turn on when <xliff:g id="ID_1">%1$s</xliff:g> starts"</string>
     <string name="dark_ui_summary_on_auto_mode_never" msgid="2468597062391435521">"Will never turn off automatically"</string>
     <string name="dark_ui_summary_on_auto_mode_auto" msgid="5553376115092648636">"Will turn off automatically at sunrise"</string>
     <string name="dark_ui_summary_on_auto_mode_custom" msgid="2526935680241734784">"Will turn off automatically at <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_summary_on_auto_mode_custom_bedtime" msgid="1976993025762551246">"Will turn off automatically after bedtime"</string>
+    <string name="dark_ui_summary_on_auto_mode_modes" msgid="7769594183411785087">"Will turn off when <xliff:g id="ID_1">%1$s</xliff:g> ends"</string>
     <string name="dark_ui_text" msgid="4392646155331126666">"Dark theme uses a black background to help keep battery alive longer on some screens. Dark theme schedules wait to turn on until your screen is off."</string>
     <string name="dark_ui_bedtime_footer_summary" msgid="5576501833145170581">"Dark theme is currently following your Bedtime mode schedule"</string>
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"Bedtime mode settings"</string>
+    <string name="dark_ui_modes_footer_summary" msgid="1041117250408363391">"{count,plural,offset:2 =0{Modes can also activate dark theme}=1{{mode_1} also activates dark theme}=2{{mode_1} and {mode_2} also activate dark theme}=3{{mode_1}, {mode_2}, and {mode_3} also activate dark theme}other{{mode_1}, {mode_2}, and # more also activate dark theme}}"</string>
+    <string name="dark_ui_modes_footer_action" msgid="80671811848446248">"Modes settings"</string>
     <string name="even_dimmer_display_title" msgid="6731255736830410149">"Even dimmer"</string>
     <string name="even_dimmer_display_summary" msgid="120301078873242172">"Allow device to go dimmer than usual"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"Screen timeout"</string>
@@ -1948,7 +1952,7 @@
     <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"Bottom-right click"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"Click in the bottom right corner of the touchpad for more options"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Pointer speed"</string>
-    <string name="pointer_fill_style" msgid="8413840032931637595">"Pointer fill style"</string>
+    <string name="pointer_fill_style" msgid="8794616790175016092">"Pointer color"</string>
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Change pointer fill style to black"</string>
     <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"Change pointer fill style to green"</string>
     <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"Change pointer fill style to yellow"</string>
@@ -2065,6 +2069,9 @@
     <string name="general_category_title" msgid="6298579528716834157">"General"</string>
     <string name="display_category_title" msgid="6638191682294461408">"Display"</string>
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"Colour and motion"</string>
+    <string name="accessibility_pointer_and_touchpad_title" msgid="8719482393177273831">"Pointer &amp; touchpad accessibility"</string>
+    <string name="accessibility_pointer_and_touchpad_summary" msgid="6089872217234956258">"Pointer color, pointer size &amp; more"</string>
+    <string name="accessibility_pointer_color_customization_title" msgid="3376392766113189508">"Pointer color customization"</string>
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"Color contrast"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"Higher contrast makes text, buttons, and icons stand out more. Choose the contrast that looks best to you."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"Some apps may not support all color and text contrast settings"</string>
@@ -2230,6 +2237,7 @@
     <string name="accessibility_button_opacity_title" msgid="4727355657530362289">"Transparency when not in use"</string>
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"Transparent"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"Non-transparent"</string>
+    <string name="accessibility_button_disabled_button_mode_summary" msgid="1978174613270619492">"Unavailable while using navigation bar button mode."</string>
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"High contrast text"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"Change text color to black or white. Maximizes contrast with the background."</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_title" msgid="8737272017343509753">"Maximize text contrast"</string>
@@ -5286,8 +5294,10 @@
     <string name="show_captions_enabled" msgid="7089043007924626">"On"</string>
     <string name="live_caption_disabled" msgid="3562035026547887366">"Off"</string>
     <string name="live_caption_enabled" msgid="5269360946200718949">"On"</string>
-    <string name="audio_seek_bar_state_left_first" msgid="8814986910920838972">"Audio %1$d%% left, %2$d%% right"</string>
-    <string name="audio_seek_bar_state_right_first" msgid="1999368979633398876">"Audio %1$d%% right, %2$d%% left"</string>
+    <!-- no translation found for audio_seek_bar_state_left_first (1641359989891833888) -->
+    <skip />
+    <!-- no translation found for audio_seek_bar_state_right_first (6027686565598201061) -->
+    <skip />
     <string name="about_phone_device_name_warning" msgid="3243226572404472381">"Your device name is visible to apps you installed. It may also be seen by other people when you connect to Bluetooth devices, connect to a Wi-Fi network or set up a Wi-Fi hotspot."</string>
     <string name="grammatical_gender_title" msgid="8584242850477270828">"Grammatical gender"</string>
     <string name="grammatical_gender_dialog_title" msgid="8754048592099871587">"Select Grammatical gender"</string>
