--- a/res/values-ka/strings.xml
+++ b/res/values-ka/strings.xml
@@ -1277,13 +1277,17 @@
     <string name="dark_ui_summary_off_auto_mode_auto" msgid="6766831395970887213">"ავტომატურად ჩაირთვება მზის ჩასვლისას"</string>
     <string name="dark_ui_summary_off_auto_mode_custom" msgid="1345906088326708376">"ავტომატურად ჩაირთვება <xliff:g id="ID_1">%1$s</xliff:g>-ზე"</string>
     <string name="dark_ui_summary_off_auto_mode_custom_bedtime" msgid="7759826673214624622">"ძილის დროს ავტომატურად ჩაირთვება"</string>
+    <string name="dark_ui_summary_off_auto_mode_modes" msgid="2672694802103388896">"ჩაირთვება, როცა <xliff:g id="ID_1">%1$s</xliff:g> დაიწყება"</string>
     <string name="dark_ui_summary_on_auto_mode_never" msgid="2468597062391435521">"არასოდეს გამოირთვება ავტომატურად"</string>
     <string name="dark_ui_summary_on_auto_mode_auto" msgid="5553376115092648636">"ავტომატურად გამოირთვება მზის ამოსვლისას"</string>
     <string name="dark_ui_summary_on_auto_mode_custom" msgid="2526935680241734784">"ავტომატურად გამოირთვება <xliff:g id="ID_1">%1$s</xliff:g>-ზე"</string>
     <string name="dark_ui_summary_on_auto_mode_custom_bedtime" msgid="1976993025762551246">"ძილის დროის შემდეგ ავტომატურად გამოირთვება"</string>
+    <string name="dark_ui_summary_on_auto_mode_modes" msgid="7769594183411785087">"გამოირთვება, როცა <xliff:g id="ID_1">%1$s</xliff:g> დამთავრდება"</string>
     <string name="dark_ui_text" msgid="4392646155331126666">"მუქი თემა ზოგიერთ ეკრანზე იყენებს შავ ფონს იმისთვის, რომ ბატარეამ უფრო დიდხანს გაძლოს. მუქი თემის განრიგი ეკრანის გამორთვის შემდეგ გააქტიურდება."</string>
     <string name="dark_ui_bedtime_footer_summary" msgid="5576501833145170581">"მუქი თემა ამჟამად მიჰყვება თქვენს ძილის დროის რეჟიმის განრიგს"</string>
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"ძილის დროის რეჟიმის პარამეტრები"</string>
+    <string name="dark_ui_modes_footer_summary" msgid="1041117250408363391">"{count,plural,offset:2 =0{რეჟიმებმა შეიძლება მუქი თემაც გაააქტიუროს}=1{{mode_1} ასევე ააქტიურებს მუქ თემას}=2{{mode_1} და {mode_2} ასევე ააქტიურებს მუქ თემას}=3{{mode_1}, {mode_2} და {mode_3} ასევე ააქტიურებს მუქ თემას}other{{mode_1}, {mode_2} და # სხვა ასევე ააქტიურებს მუქ თემას}}"</string>
+    <string name="dark_ui_modes_footer_action" msgid="80671811848446248">"რეჟიმების პარამეტრები"</string>
     <string name="even_dimmer_display_title" msgid="6731255736830410149">"უფრო მეტად დაბნელება"</string>
     <string name="even_dimmer_display_summary" msgid="120301078873242172">"ჩვეულებრივზე უფრო მეტად დააბნელეთ მოწყობილობა"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"ეკრანის დროის ლიმიტი"</string>
@@ -1948,7 +1952,8 @@
     <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"ქვედა მარჯვენა დაწკაპუნება"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"დამატებითი ვარიანტებისთვის დააწკაპუნეთ სენსორული პანელის ქვედა მარჯვენა კუთხეში"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"მანიშნებლის სიჩქარე"</string>
-    <string name="pointer_fill_style" msgid="8413840032931637595">"კურსორის სტილი"</string>
+    <!-- no translation found for pointer_fill_style (8794616790175016092) -->
+    <skip />
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"კურსორის სტილის შეცვლა შავად"</string>
     <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"კურსორის სტილის შეცვლა მწვანედ"</string>
     <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"კურსორის სტილის შეცვლა ყვითლად"</string>
@@ -2065,6 +2070,12 @@
     <string name="general_category_title" msgid="6298579528716834157">"ზოგადი"</string>
     <string name="display_category_title" msgid="6638191682294461408">"ეკრანი"</string>
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"ფერი და მოძრაობა"</string>
+    <!-- no translation found for accessibility_pointer_and_touchpad_title (8719482393177273831) -->
+    <skip />
+    <!-- no translation found for accessibility_pointer_and_touchpad_summary (6089872217234956258) -->
+    <skip />
+    <!-- no translation found for accessibility_pointer_color_customization_title (3376392766113189508) -->
+    <skip />
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"ფერთა კონტრასტი"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"მაღალი კონტრასტი ტექსტს, ღილაკებსა და ხატულებს მეტად გამოკვეთს. აირჩიეთ თქვენთვის საუკეთესო კონტრასტი."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"ზოგიერთ აპს არ აქვს ყველა ფერისა და ტექსტის კონტრასტის პარამეტრების მხარდაჭერა"</string>
@@ -2230,6 +2241,7 @@
     <string name="accessibility_button_opacity_title" msgid="4727355657530362289">"გამჭვირვალობა გამოუყენებლობისას"</string>
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"გამჭვირვალე"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"გაუმჭვირვალე"</string>
+    <string name="accessibility_button_disabled_button_mode_summary" msgid="1978174613270619492">"მიუწვდომელია ნავიგაციის ზოლის ღილაკის რეჟიმის გამოყენებისას."</string>
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"მაღალკონტრასტიანი ტექსტი"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"ტექსტის ფერის შავით ან თეთრით შეცვლა. აძლიერებს კონტრასტს ფონთან."</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_title" msgid="8737272017343509753">"ტექსტის კონტრასტის მაქსიმიზაცია"</string>
@@ -5286,8 +5298,10 @@
     <string name="show_captions_enabled" msgid="7089043007924626">"ჩართული"</string>
     <string name="live_caption_disabled" msgid="3562035026547887366">"გამორთული"</string>
     <string name="live_caption_enabled" msgid="5269360946200718949">"ჩართული"</string>
-    <string name="audio_seek_bar_state_left_first" msgid="8814986910920838972">"აუდიო %1$d%% მარცხენა, %2$d%% მარჯვენა"</string>
-    <string name="audio_seek_bar_state_right_first" msgid="1999368979633398876">"აუდიო %1$d%% მარჯვენა, %2$d%% მარცხენა"</string>
+    <!-- no translation found for audio_seek_bar_state_left_first (1641359989891833888) -->
+    <skip />
+    <!-- no translation found for audio_seek_bar_state_right_first (6027686565598201061) -->
+    <skip />
     <string name="about_phone_device_name_warning" msgid="3243226572404472381">"თქვენი მოწყობილობის სახელი ხილულია დაინსტალირებული აპებისთვის. მის დანახვას შეძლებენ სხვა პირებიც, როცა Bluetooth მოწყობილობებს ან Wi-Fi ქსელს დაუკავშირდებით, ან Wi-Fi უსადენო ქსელს დააყენებთ."</string>
     <string name="grammatical_gender_title" msgid="8584242850477270828">"გრამატიკული სქესი"</string>
     <string name="grammatical_gender_dialog_title" msgid="8754048592099871587">"აირჩიეთ გრამატიკული სქესი"</string>
