--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1277,13 +1277,21 @@
     <string name="dark_ui_summary_off_auto_mode_auto" msgid="6766831395970887213">"Включится автоматически на закате"</string>
     <string name="dark_ui_summary_off_auto_mode_custom" msgid="1345906088326708376">"Включится автоматически в <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_summary_off_auto_mode_custom_bedtime" msgid="7759826673214624622">"Включится автоматически при переходе в ночной режим"</string>
+    <!-- no translation found for dark_ui_summary_off_auto_mode_modes (2672694802103388896) -->
+    <skip />
     <string name="dark_ui_summary_on_auto_mode_never" msgid="2468597062391435521">"Не выключится автоматически"</string>
     <string name="dark_ui_summary_on_auto_mode_auto" msgid="5553376115092648636">"Выключится автоматически на рассвете"</string>
     <string name="dark_ui_summary_on_auto_mode_custom" msgid="2526935680241734784">"Отключится автоматически в <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_summary_on_auto_mode_custom_bedtime" msgid="1976993025762551246">"Отключится автоматически при выходе из ночного режима"</string>
+    <!-- no translation found for dark_ui_summary_on_auto_mode_modes (7769594183411785087) -->
+    <skip />
     <string name="dark_ui_text" msgid="4392646155331126666">"В тёмной теме используется черный фон. Это помогает продлить время работы от батареи для некоторых устройств. Смена темы по расписанию происходит только после выключения экрана."</string>
     <string name="dark_ui_bedtime_footer_summary" msgid="5576501833145170581">"Тёмная тема сейчас используется в соответствии с вашим расписанием ночного режима."</string>
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"Настройки ночного режима"</string>
+    <!-- no translation found for dark_ui_modes_footer_summary (1041117250408363391) -->
+    <skip />
+    <!-- no translation found for dark_ui_modes_footer_action (80671811848446248) -->
+    <skip />
     <string name="even_dimmer_display_title" msgid="6731255736830410149">"Более низкая яркость"</string>
     <string name="even_dimmer_display_summary" msgid="120301078873242172">"Разрешить уменьшать яркость экрана ниже обычного"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"Время отключения экрана"</string>
@@ -1948,7 +1956,8 @@
     <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"Нажатие на правый нижний угол"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"Доп. опции: нажмите на правый нижний угол сенсорной панели"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Скорость указателя"</string>
-    <string name="pointer_fill_style" msgid="8413840032931637595">"Стиль заливки указателя"</string>
+    <!-- no translation found for pointer_fill_style (8794616790175016092) -->
+    <skip />
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Изменить стиль заливки на черный"</string>
     <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"Изменить стиль заливки на зеленый"</string>
     <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"Изменить стиль заливки на желтый"</string>
@@ -2065,6 +2074,12 @@
     <string name="general_category_title" msgid="6298579528716834157">"Общие"</string>
     <string name="display_category_title" msgid="6638191682294461408">"Экран"</string>
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"Цвет и движение"</string>
+    <!-- no translation found for accessibility_pointer_and_touchpad_title (8719482393177273831) -->
+    <skip />
+    <!-- no translation found for accessibility_pointer_and_touchpad_summary (6089872217234956258) -->
+    <skip />
+    <!-- no translation found for accessibility_pointer_color_customization_title (3376392766113189508) -->
+    <skip />
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"Цветовая контрастность"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"Настройте контрастность. Чем она выше, тем заметнее текст, кнопки и значки."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"Некоторые приложения могут поддерживать не все настройки контрастности цвета и текста."</string>
@@ -2230,6 +2245,8 @@
     <string name="accessibility_button_opacity_title" msgid="4727355657530362289">"Прозрачность кнопки"</string>
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"Прозрачная"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"Непрозрачная"</string>
+    <!-- no translation found for accessibility_button_disabled_button_mode_summary (1978174613270619492) -->
+    <skip />
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"Контрастный текст"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"Изменить цвет текста на черный или белый, чтобы сделать его максимально заметным"</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_title" msgid="8737272017343509753">"Максимальная контрастность текста"</string>
@@ -5288,8 +5305,10 @@
     <string name="show_captions_enabled" msgid="7089043007924626">"Включено"</string>
     <string name="live_caption_disabled" msgid="3562035026547887366">"Отключено"</string>
     <string name="live_caption_enabled" msgid="5269360946200718949">"Включено"</string>
-    <string name="audio_seek_bar_state_left_first" msgid="8814986910920838972">"Аудио: %1$d %% слева, %2$d %% справа"</string>
-    <string name="audio_seek_bar_state_right_first" msgid="1999368979633398876">"Аудио: %1$d %% справа, %2$d %% слева"</string>
+    <!-- no translation found for audio_seek_bar_state_left_first (1641359989891833888) -->
+    <skip />
+    <!-- no translation found for audio_seek_bar_state_right_first (6027686565598201061) -->
+    <skip />
     <string name="about_phone_device_name_warning" msgid="3243226572404472381">"Название устройства доступно установленным приложениям. Его также могут видеть другие пользователи, когда вы подключаетесь к устройствам Bluetooth и сетям Wi-Fi или настраиваете точку доступа Wi-Fi."</string>
     <string name="grammatical_gender_title" msgid="8584242850477270828">"Грамматический род"</string>
     <string name="grammatical_gender_dialog_title" msgid="8754048592099871587">"Выберите грамматический род"</string>
