--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -834,14 +834,10 @@
     <string name="bluetooth_scanning_on_info_message" msgid="786648535600075223">"Коли ви вмикаєте Bluetooth, ваш пристрій може обмінюватися даними з іншими пристроями з цією технологією поблизу.\n\nДодатки й сервіси можуть шукати пристрої поруч, навіть якщо Bluetooth вимкнено. Завдяки цьому покращується робота пристрою, зокрема його функцій і сервісів, які використовують геодані. Таке налаштування можна змінити в параметрах пошуку пристроїв із Bluetooth."</string>
     <string name="bluetooth_scanning_on_info_message_auto_on_available" msgid="7792443293031247638">"Коли Bluetooth увімкнено, ваш пристрій може обмінюватися даними з пристроями з Bluetooth поблизу. Такі функції, як швидкий обмін і \"Знайти пристрій\", використовують Bluetooth.\n\nДодатки й сервіси можуть шукати пристрої поблизу, навіть якщо Bluetooth вимкнено. Завдяки цьому покращується робота пристрою, зокрема його функцій і сервісів, які використовують геодані. Це можна змінити в налаштуваннях пошуку пристроїв із Bluetooth."</string>
     <string name="bluetooth_scan_change" msgid="1744636222637390367">"Змінити"</string>
-    <!-- no translation found for bluetooth_key_missing_title (7799054163548353853) -->
-    <skip />
-    <!-- no translation found for bluetooth_key_missing_message (2388861106663695319) -->
-    <skip />
-    <!-- no translation found for bluetooth_key_missing_forget (4692006517823001013) -->
-    <skip />
-    <!-- no translation found for bluetooth_key_missing_cancel (2482416446357804371) -->
-    <skip />
+    <string name="bluetooth_key_missing_title" msgid="7799054163548353853">"Пристрій \"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>\" не підключено"</string>
+    <string name="bluetooth_key_missing_message" msgid="2388861106663695319">"З міркувань безпеки видаліть цей пристрій, а потім підключіть його знову"</string>
+    <string name="bluetooth_key_missing_forget" msgid="4692006517823001013">"Забути пристрій"</string>
+    <string name="bluetooth_key_missing_cancel" msgid="2482416446357804371">"Скасувати"</string>
     <string name="device_details_title" msgid="1155622417516195481">"Про пристрій"</string>
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"Налаштування клавіатури"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"Інші налаштування"</string>
@@ -1281,13 +1277,21 @@
     <string name="dark_ui_summary_off_auto_mode_auto" msgid="6766831395970887213">"Увімкнеться автоматично після заходу сонця"</string>
     <string name="dark_ui_summary_off_auto_mode_custom" msgid="1345906088326708376">"Вмикатиметься автоматично о <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_summary_off_auto_mode_custom_bedtime" msgid="7759826673214624622">"Увімкнеться автоматично на час сну"</string>
+    <!-- no translation found for dark_ui_summary_off_auto_mode_modes (2672694802103388896) -->
+    <skip />
     <string name="dark_ui_summary_on_auto_mode_never" msgid="2468597062391435521">"Не вимкнеться автоматично"</string>
     <string name="dark_ui_summary_on_auto_mode_auto" msgid="5553376115092648636">"Вимкнеться автоматично на світанку"</string>
     <string name="dark_ui_summary_on_auto_mode_custom" msgid="2526935680241734784">"Вимикатиметься автоматично о <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_summary_on_auto_mode_custom_bedtime" msgid="1976993025762551246">"Вимкнеться автоматично після часу сну"</string>
+    <!-- no translation found for dark_ui_summary_on_auto_mode_modes (7769594183411785087) -->
+    <skip />
     <string name="dark_ui_text" msgid="4392646155331126666">"Щоб економити заряд акумулятора, у темній темі використовується чорний фон. Її розклад буде активовано після вимкнення екрана."</string>
     <string name="dark_ui_bedtime_footer_summary" msgid="5576501833145170581">"Темна тема наразі вмикається згідно з розкладом нічного режиму"</string>
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"Налаштування нічного режиму"</string>
+    <!-- no translation found for dark_ui_modes_footer_summary (1041117250408363391) -->
+    <skip />
+    <!-- no translation found for dark_ui_modes_footer_action (80671811848446248) -->
+    <skip />
     <string name="even_dimmer_display_title" msgid="6731255736830410149">"Ще темніше"</string>
     <string name="even_dimmer_display_summary" msgid="120301078873242172">"Дозволити затемнювати екран пристрою більше ніж зазвичай"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"Час вимкнення екрана"</string>
@@ -1952,7 +1956,8 @@
     <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"Дотик у правому нижньому куті"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"Натисніть сенсорну панель справа внизу, щоб побачити інші опції"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Швидкість курсора"</string>
-    <string name="pointer_fill_style" msgid="8413840032931637595">"Стиль заповнення курсора"</string>
+    <!-- no translation found for pointer_fill_style (8794616790175016092) -->
+    <skip />
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Змінити стиль курсора на чорний"</string>
     <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"Змінити стиль курсора на зелений"</string>
     <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"Змінити стиль курсора на жовтий"</string>
@@ -1999,10 +2004,8 @@
     <string name="modifier_keys_reset" msgid="551170906710422041">"Скинути"</string>
     <string name="modifier_keys_picker_title" msgid="244545904150587851">"Вибрати клавішу-модифікатор"</string>
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"Виберіть нову клавішу для <xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g>:"</string>
-    <!-- no translation found for keyboard_a11y_settings (2564659018555385728) -->
-    <skip />
-    <!-- no translation found for keyboard_a11y_settings_summary (1698531156574098722) -->
-    <skip />
+    <string name="keyboard_a11y_settings" msgid="2564659018555385728">"Функції доступності фізичної клавіатури"</string>
+    <string name="keyboard_a11y_settings_summary" msgid="1698531156574098722">"Залипання клавіш, ігнорування повторного натискання клавіш, клавіші для керування мишею"</string>
     <string name="ime_label_title" msgid="8994569521516807168">"Розкладка <xliff:g id="IME_LABEL">%s</xliff:g>"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"За умовчанням"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"Автоматична розкладка: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2071,6 +2074,12 @@
     <string name="general_category_title" msgid="6298579528716834157">"Загальні"</string>
     <string name="display_category_title" msgid="6638191682294461408">"Екран"</string>
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"Кольори та зйомка в русі"</string>
+    <!-- no translation found for accessibility_pointer_and_touchpad_title (8719482393177273831) -->
+    <skip />
+    <!-- no translation found for accessibility_pointer_and_touchpad_summary (6089872217234956258) -->
+    <skip />
+    <!-- no translation found for accessibility_pointer_color_customization_title (3376392766113189508) -->
+    <skip />
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"Контраст кольорів"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"Якщо збільшити контраст, текст, кнопки й значки більше виділятимуться. Виберіть потрібний рівень контрасту."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"Деякі додатки можуть підтримувати не всі налаштування контрасту кольорів і тексту"</string>
@@ -2214,11 +2223,9 @@
     <string name="accessibility_shortcut_edit_dialog_title_advance" msgid="4567868630655591506">"Додатково"</string>
     <string name="accessibility_screen_magnification_navbar_configuration_warning" msgid="266736851606791552">"Для кнопки спеціальних можливостей вибрано службу \"<xliff:g id="SERVICE">%1$s</xliff:g>\". Щоб змінити на збільшення, натисніть і втримуйте кнопку спеціальних можливостей, а потім виберіть \"Збільшення\"."</string>
     <string name="accessibility_screen_magnification_gesture_navigation_warning" msgid="991017769735632046">"Для цього жесту спеціальних можливостей вибрана команда \"<xliff:g id="SERVICE">%1$s</xliff:g>\". Щоб збільшити масштаб, проведіть двома пальцями знизу вгору і втримуйте їх на екрані. Потім виберіть збільшення."</string>
-    <!-- no translation found for accessibility_global_gesture_preference_title (8866765674372344850) -->
-    <skip />
+    <string name="accessibility_global_gesture_preference_title" msgid="8866765674372344850">"Швидка дія клавішами гучності"</string>
     <string name="accessibility_shortcut_settings" msgid="836783442658447995">"Налаштування засобу спеціальних можливостей"</string>
-    <!-- no translation found for accessibility_shortcut_service_on_lock_screen_title (2301019277262462426) -->
-    <skip />
+    <string name="accessibility_shortcut_service_on_lock_screen_title" msgid="2301019277262462426">"Швидка дія клавішами гучності на заблоков. екрані"</string>
     <string name="accessibility_shortcut_description" msgid="2184693606202133549">"Дає змогу вмикати функцію із заблокованого екрана за допомогою комбінації клавіш. Натисніть і утримуйте обидві клавіші гучності впродовж кількох секунд."</string>
     <string name="accessibility_button_title" msgid="5251235485581552614">"Кнопка функцій доступності"</string>
     <string name="accessibility_button_gesture_title" msgid="3573456209050374139">"Кнопка й жест функцій доступності"</string>
@@ -2238,6 +2245,8 @@
     <string name="accessibility_button_opacity_title" msgid="4727355657530362289">"Прозорість неактивної кнопки"</string>
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"Прозора"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"Непрозора"</string>
+    <!-- no translation found for accessibility_button_disabled_button_mode_summary (1978174613270619492) -->
+    <skip />
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"Висококонтрастний текст"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"Змініть колір тексту на чорний або білий. Це максимально підвищує контраст із фоном."</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_title" msgid="8737272017343509753">"Збільшити контраст тексту"</string>
@@ -4112,8 +4121,7 @@
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Усі правила режиму \"Не турбувати\", які створив цей додаток, буде видалено."</string>
     <string name="zen_modes_access_warning_dialog_title" msgid="8372164559156809659">"Дозволити додатку <xliff:g id="APP">%1$s</xliff:g> доступ до режимів?"</string>
     <string name="zen_modes_access_warning_dialog_summary" msgid="2432178679607798200">"Додаток зможе вмикати й вимикати режим \"Не турбувати\", керувати режимами й активувати їх, а також змінювати відповідні налаштування."</string>
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (189454396436517964) -->
-    <skip />
+    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="189454396436517964">"Скасувати доступ до режимів для додатка <xliff:g id="APP">%1$s</xliff:g>?"</string>
     <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"Усі режими, створені цим додатком, буде вилучено."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Не оптимізувати"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Оптимізувати"</string>
@@ -5297,8 +5305,10 @@
     <string name="show_captions_enabled" msgid="7089043007924626">"Увімкнено"</string>
     <string name="live_caption_disabled" msgid="3562035026547887366">"Вимкнено"</string>
     <string name="live_caption_enabled" msgid="5269360946200718949">"Увімкнено"</string>
-    <string name="audio_seek_bar_state_left_first" msgid="8814986910920838972">"Аудіо: %1$d%% ліворуч, %2$d%% праворуч"</string>
-    <string name="audio_seek_bar_state_right_first" msgid="1999368979633398876">"Аудіо: %1$d%% праворуч, %2$d%% ліворуч"</string>
+    <!-- no translation found for audio_seek_bar_state_left_first (1641359989891833888) -->
+    <skip />
+    <!-- no translation found for audio_seek_bar_state_right_first (6027686565598201061) -->
+    <skip />
     <string name="about_phone_device_name_warning" msgid="3243226572404472381">"Назва пристрою відображається в установлених додатках. Її також можуть бачити інші користувачі, коли ви підключаєтеся до пристроїв із Bluetooth чи мережі Wi-Fi або налаштовуєте точку доступу Wi-Fi."</string>
     <string name="grammatical_gender_title" msgid="8584242850477270828">"Граматичний рід"</string>
     <string name="grammatical_gender_dialog_title" msgid="8754048592099871587">"Виберіть граматичний рід"</string>
