--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -1277,13 +1277,17 @@
     <string name="dark_ui_summary_off_auto_mode_auto" msgid="6766831395970887213">"غروب آفتاب پر خودکار طور پر آن ہو جائے گی"</string>
     <string name="dark_ui_summary_off_auto_mode_custom" msgid="1345906088326708376">"<xliff:g id="ID_1">%1$s</xliff:g> پر خودکار طور پر آن ہو جائے گا"</string>
     <string name="dark_ui_summary_off_auto_mode_custom_bedtime" msgid="7759826673214624622">"بیڈ ٹائم پر خودکار طور پر آن ہو جائے گی"</string>
+    <string name="dark_ui_summary_off_auto_mode_modes" msgid="2672694802103388896">"<xliff:g id="ID_1">%1$s</xliff:g> کے شروع ہونے پر آن ہو جائے گی"</string>
     <string name="dark_ui_summary_on_auto_mode_never" msgid="2468597062391435521">"کبھی بھی خودکار طور پر آف نہیں ہو گی"</string>
     <string name="dark_ui_summary_on_auto_mode_auto" msgid="5553376115092648636">"طلوع آفتاب پر خودکار طور پر آف ہو جائے گی"</string>
     <string name="dark_ui_summary_on_auto_mode_custom" msgid="2526935680241734784">"<xliff:g id="ID_1">%1$s</xliff:g> پر خودکار طور پر آف ہو جائے گا"</string>
     <string name="dark_ui_summary_on_auto_mode_custom_bedtime" msgid="1976993025762551246">"بیڈ ٹائم کے بعد خودکار طور پر آف ہو جائے گی"</string>
+    <string name="dark_ui_summary_on_auto_mode_modes" msgid="7769594183411785087">"<xliff:g id="ID_1">%1$s</xliff:g> کے ختم ہونے پر آف ہو جائے گی"</string>
     <string name="dark_ui_text" msgid="4392646155331126666">"گہری تھیم کچھ اسکرینز پر بیٹری کو زیادہ دیر تک فعال رکھنے میں مدد کے لیے سیاہ پس منظر استعمال کرتی ہے۔ گہری تھیم کے شیڈولز آپ کی اسکرین کے آف ہونے پر آن ہونے کا انتظار کرتے ہیں۔"</string>
     <string name="dark_ui_bedtime_footer_summary" msgid="5576501833145170581">"گہری تھیم فی الحال آپ کے بیڈ ٹائم وضع کے شیڈول کی پیروی کر رہی ہے"</string>
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"بیڈ ٹائم وضع کی ترتیبات"</string>
+    <string name="dark_ui_modes_footer_summary" msgid="1041117250408363391">"{count,plural,offset:2 =0{موڈز گہری تھیم کو بھی فعال کر سکتے ہیں}=1{{mode_1} گہری تھیم کو بھی فعال کرتا ہے}=2{{mode_1} اور {mode_2} گہری تھیم کو بھی فعال کرتے ہیں}=3{{mode_1}، {mode_2} اور {mode_3} گہری تھیم کو بھی فعال کرتے ہیں}other{{mode_1}، {mode_2} اور # مزید گہری تھیم کو بھی فعال کرتے ہیں}}"</string>
+    <string name="dark_ui_modes_footer_action" msgid="80671811848446248">"موڈز کی ترتیبات"</string>
     <string name="even_dimmer_display_title" msgid="6731255736830410149">"اور زیادہ مدھم"</string>
     <string name="even_dimmer_display_summary" msgid="120301078873242172">"آلہ کو معمول سے مدھم ہونے دیں"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"اسکرین ٹائم آؤٹ"</string>
@@ -1948,7 +1952,8 @@
     <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"نیچے دایاں کلک کرنا"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"مزید اختیارات کے لیے ٹچ پیڈ کے نیچے بائیں کونے پر کلک کریں"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"پوائنٹر کی رفتار"</string>
-    <string name="pointer_fill_style" msgid="8413840032931637595">"پوائنٹر فِل اسٹائل"</string>
+    <!-- no translation found for pointer_fill_style (8794616790175016092) -->
+    <skip />
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"پوائنٹر فِل اسٹائل کو سیاہ میں بدلیں"</string>
     <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"پوائنٹر فِل اسٹائل کو سبز میں بدلیں"</string>
     <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"پوائنٹر فِل اسٹائل کو پیلے میں بدلیں"</string>
@@ -2065,6 +2070,12 @@
     <string name="general_category_title" msgid="6298579528716834157">"عام"</string>
     <string name="display_category_title" msgid="6638191682294461408">"ڈسپلے"</string>
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"رنگ اور موشَن"</string>
+    <!-- no translation found for accessibility_pointer_and_touchpad_title (8719482393177273831) -->
+    <skip />
+    <!-- no translation found for accessibility_pointer_and_touchpad_summary (6089872217234956258) -->
+    <skip />
+    <!-- no translation found for accessibility_pointer_color_customization_title (3376392766113189508) -->
+    <skip />
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"رنگ کا کنٹراسٹ"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"زیادہ کنٹراسٹ ٹیکسٹ، بٹنز اور آئیکنز کو مزید نمایاں کرتا ہے۔ اس کنٹراسٹ کا انتخاب کریں جو آپ کو بہترین لگتا ہو۔"</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"ہو سکتا ہے کچھ ایپس تمام رنگ اور ٹیکسٹ کے کنٹراسٹ کی ترتیبات کو سپورٹ نہ کریں"</string>
@@ -2230,6 +2241,7 @@
     <string name="accessibility_button_opacity_title" msgid="4727355657530362289">"استعمال میں نہ ہونے پر شفافیت"</string>
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"شفاف"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"غیر شفاف"</string>
+    <string name="accessibility_button_disabled_button_mode_summary" msgid="1978174613270619492">"نیویگیشن بار بٹن موڈ استعمال کرتے وقت دستیاب نہیں ہے۔"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"اعلی تناسب امتزاج والا ٹیکسٹ"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"ٹیکسٹ کا رنگ سیاہ یا سفید میں تبدیل کریں۔ پس منظر کے ساتھ کنٹراسٹ کو بڑھاتا ہے۔"</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_title" msgid="8737272017343509753">"ٹیکسٹ کنٹراسٹ زیادہ سے زیادہ کریں"</string>
@@ -5286,8 +5298,10 @@
     <string name="show_captions_enabled" msgid="7089043007924626">"آن ہے"</string>
     <string name="live_caption_disabled" msgid="3562035026547887366">"آف ہے"</string>
     <string name="live_caption_enabled" msgid="5269360946200718949">"آن ہے"</string>
-    <string name="audio_seek_bar_state_left_first" msgid="8814986910920838972">"‏آڈیو %1$d%% بائیں، %2$d%% دائیں"</string>
-    <string name="audio_seek_bar_state_right_first" msgid="1999368979633398876">"‏آڈیو %1$d%% دائیں، %2$d%% بائیں"</string>
+    <!-- no translation found for audio_seek_bar_state_left_first (1641359989891833888) -->
+    <skip />
+    <!-- no translation found for audio_seek_bar_state_right_first (6027686565598201061) -->
+    <skip />
     <string name="about_phone_device_name_warning" msgid="3243226572404472381">"‏آپ کے آلے کا نام آپ کی انسٹال کردہ ایپس میں دکھائی دیتا ہے۔ آپ کے بلوٹوتھ آلات سے منسلک ہونے، Wi-Fi نیٹ ورک سے منسلک ہونے یا Wi-Fi ہاٹ اسپاٹ کو سیٹ اپ کرنے پر دوسرے لوگ بھی اسے دیکھ سکتے ہیں۔"</string>
     <string name="grammatical_gender_title" msgid="8584242850477270828">"قواعد سے متعلق صنف"</string>
     <string name="grammatical_gender_dialog_title" msgid="8754048592099871587">"قواعد سے متعلق صنف منتخب کریں"</string>
